--- a/formatPages/3.校企合作馆建设项目简介.html
+++ b/formatPages/3.校企合作馆建设项目简介.html
@@ -1,5 +1,5 @@
 
-<html xmlns:o="urn:schemas-microsoft-com:office:office" xmlns:w="urn:schemas-microsoft-com:office:word" xmlns:dt="uuid:C2F41010-65B3-11d1-A29F-00AA00C14882" xmlns="http://www.w3.org/TR/REC-html40"><head><meta http-equiv=Content-Type  content="text/html; charset=gb2312" ><meta name=ProgId  content=Word.Document ><meta name=Generator  content="Microsoft Word 14" ><meta name=Originator  content="Microsoft Word 14" ><title></title><!--[if gte mso 9]><xml><o:DocumentProperties><o:Author>Administrator</o:Author><o:LastAuthor>Ö½É¡ÏÂµÄÑÌÓê</o:LastAuthor><o:Revision>1</o:Revision><o:Pages>1</o:Pages></o:DocumentProperties><o:CustomDocumentProperties><o:KSOProductBuildVer dt:dt="string" >2052-11.1.0.11194</o:KSOProductBuildVer><o:ICV dt:dt="string" >528861723B994910B151CD84432A3427</o:ICV></o:CustomDocumentProperties></xml><![endif]--><!--[if gte mso 9]><xml><o:OfficeDocumentSettings></o:OfficeDocumentSettings></xml><![endif]--><!--[if gte mso 9]><xml><w:WordDocument><w:BrowserLevel>MicrosoftInternetExplorer4</w:BrowserLevel><w:DisplayHorizontalDrawingGridEvery>0</w:DisplayHorizontalDrawingGridEvery><w:DisplayVerticalDrawingGridEvery>2</w:DisplayVerticalDrawingGridEvery><w:DocumentKind>DocumentNotSpecified</w:DocumentKind><w:DrawingGridVerticalSpacing>7.8 °õ</w:DrawingGridVerticalSpacing><w:PunctuationKerning></w:PunctuationKerning><w:View>Web</w:View><w:Compatibility><w:AdjustLineHeightInTable/><w:DontGrowAutofit/><w:BalanceSingleByteDoubleByteWidth/><w:DoNotExpandShiftReturn/><w:UseFELayout/></w:Compatibility><w:Zoom>0</w:Zoom></w:WordDocument></xml><![endif]--><!--[if gte mso 9]><xml><w:LatentStyles DefLockedState="false"  DefUnhideWhenUsed="true"  DefSemiHidden="true"  DefQFormat="false"  DefPriority="99"  LatentStyleCount="260" >
+<html xmlns:o="urn:schemas-microsoft-com:office:office" xmlns:w="urn:schemas-microsoft-com:office:word" xmlns:dt="uuid:C2F41010-65B3-11d1-A29F-00AA00C14882" xmlns="http://www.w3.org/TR/REC-html40"><head><meta http-equiv=Content-Type  content="text/html; charset=utf8" ><meta name=ProgId  content=Word.Document ><meta name=Generator  content="Microsoft Word 14" ><meta name=Originator  content="Microsoft Word 14" ><title></title><!--[if gte mso 9]><xml><o:DocumentProperties><o:Author>Administrator</o:Author><o:LastAuthor>çº¸ä¼ä¸‹çš„çƒŸé›¨</o:LastAuthor><o:Revision>1</o:Revision><o:Pages>1</o:Pages></o:DocumentProperties><o:CustomDocumentProperties><o:KSOProductBuildVer dt:dt="string" >2052-11.1.0.11194</o:KSOProductBuildVer><o:ICV dt:dt="string" >528861723B994910B151CD84432A3427</o:ICV></o:CustomDocumentProperties></xml><![endif]--><!--[if gte mso 9]><xml><o:OfficeDocumentSettings></o:OfficeDocumentSettings></xml><![endif]--><!--[if gte mso 9]><xml><w:WordDocument><w:BrowserLevel>MicrosoftInternetExplorer4</w:BrowserLevel><w:DisplayHorizontalDrawingGridEvery>0</w:DisplayHorizontalDrawingGridEvery><w:DisplayVerticalDrawingGridEvery>2</w:DisplayVerticalDrawingGridEvery><w:DocumentKind>DocumentNotSpecified</w:DocumentKind><w:DrawingGridVerticalSpacing>7.8 ç£…</w:DrawingGridVerticalSpacing><w:PunctuationKerning></w:PunctuationKerning><w:View>Web</w:View><w:Compatibility><w:AdjustLineHeightInTable/><w:DontGrowAutofit/><w:BalanceSingleByteDoubleByteWidth/><w:DoNotExpandShiftReturn/><w:UseFELayout/></w:Compatibility><w:Zoom>0</w:Zoom></w:WordDocument></xml><![endif]--><!--[if gte mso 9]><xml><w:LatentStyles DefLockedState="false"  DefUnhideWhenUsed="true"  DefSemiHidden="true"  DefQFormat="false"  DefPriority="99"  LatentStyleCount="260" >
     <w:LsdException Locked="false"  Priority="0"  SemiHidden="false"  UnhideWhenUsed="false"  QFormat="true"  Name="Normal" ></w:LsdException>
 <w:LsdException Locked="false"  Priority="0"  SemiHidden="false"  UnhideWhenUsed="false"  QFormat="true"  Name="heading 1" ></w:LsdException>
 <w:LsdException Locked="false"  Priority="0"  SemiHidden="false"  QFormat="true"  Name="heading 2" ></w:LsdException>
@@ -263,7 +263,7 @@ font-family:"Times New Roman";
 }
 
 @font-face{
-font-family:"ËÎÌå";
+font-family:"å®‹ä½“";
 }
 
 @font-face{
@@ -275,15 +275,15 @@ font-family:"Wingdings";
 }
 
 @font-face{
-font-family:"·ÂËÎ_GB2312";
+font-family:"ä»¿å®‹_GB2312";
 }
 
 @font-face{
-font-family:"Î¢ÈíÑÅºÚ";
+font-family:"å¾®è½¯é›…é»‘";
 }
 
 p.MsoNormal{
-mso-style-name:ÕıÎÄ;
+mso-style-name:æ­£æ–‡;
 mso-style-parent:"";
 margin:0pt;
 margin-bottom:.0001pt;
@@ -291,7 +291,7 @@ mso-pagination:none;
 text-align:justify;
 text-justify:inter-ideograph;
 font-family:'Times New Roman';
-mso-fareast-font-family:·ÂËÎ_GB2312;
+mso-fareast-font-family:ä»¿å®‹_GB2312;
 font-size:16.0000pt;
 mso-font-kerning:1.0000pt;
 }
@@ -301,14 +301,14 @@ font-family:Calibri;
 }
 
 p.MsoFooter{
-mso-style-name:Ò³½Å;
+mso-style-name:é¡µè„š;
 margin:0pt;
 margin-bottom:.0001pt;
 layout-grid-mode:char;
 mso-pagination:none;
 text-align:left;
 font-family:'Times New Roman';
-mso-fareast-font-family:·ÂËÎ_GB2312;
+mso-fareast-font-family:ä»¿å®‹_GB2312;
 font-size:9.0000pt;
 mso-font-kerning:1.0000pt;
 }
@@ -329,7 +329,7 @@ color:red;
 }
 
 table.MsoNormalTable{
-mso-style-name:ÆÕÍ¨±í¸ñ;
+mso-style-name:æ™®é€šè¡¨æ ¼;
 mso-style-parent:"";
 mso-style-noshow:yes;
 mso-tstyle-rowband-size:0;
@@ -354,19 +354,19 @@ size:595.3000pt 841.9000pt;
 layout-grid:15.6000pt;
 mso-header-margin:42.5500pt;
 mso-footer-margin:49.6000pt;
-mso-footer:url("3\.Ğ£ÆóºÏ×÷¹İ½¨ÉèÏîÄ¿¼ò½é.files/header.html") f0;
+mso-footer:url("3\.æ ¡ä¼åˆä½œé¦†å»ºè®¾é¡¹ç›®ç®€ä»‹.files/header.html") f0;
 }
-div.Section0{page:Section0;}</style></head><body style="tab-interval:21pt;text-justify-trim:punctuation;" ><!--StartFragment--><div class="Section0"  style="layout-grid:15.6000pt;" ><p class=MsoNormal  align=center  style="text-align:center;" ><span style="mso-spacerun:'yes';font-family:Î¢ÈíÑÅºÚ;font-size:16.0000pt;
-mso-font-kerning:0.0000pt;" >&nbsp;</span><span style="mso-spacerun:'yes';font-family:Î¢ÈíÑÅºÚ;font-size:16.0000pt;
-mso-font-kerning:0.0000pt;" ><font face="Î¢ÈíÑÅºÚ" >Ğ£ÆóºÏ×÷¹İ½¨ÉèÏîÄ¿¼ò½é</font></span><span style="mso-spacerun:'yes';font-family:Î¢ÈíÑÅºÚ;font-size:16.0000pt;
+div.Section0{page:Section0;}</style></head><body style="tab-interval:21pt;text-justify-trim:punctuation;" ><!--StartFragment--><div class="Section0"  style="layout-grid:15.6000pt;" ><p class=MsoNormal  align=center  style="text-align:center;" ><span style="mso-spacerun:'yes';font-family:å¾®è½¯é›…é»‘;font-size:16.0000pt;
+mso-font-kerning:0.0000pt;" >&nbsp;</span><span style="mso-spacerun:'yes';font-family:å¾®è½¯é›…é»‘;font-size:16.0000pt;
+mso-font-kerning:0.0000pt;" ><font face="å¾®è½¯é›…é»‘" >æ ¡ä¼åˆä½œé¦†å»ºè®¾é¡¹ç›®ç®€ä»‹</font></span><span style="mso-spacerun:'yes';font-family:å¾®è½¯é›…é»‘;font-size:16.0000pt;
 mso-font-kerning:0.0000pt;" ><o:p></o:p></span></p><p class=MsoNormal  align=justify  style="text-indent:32.0000pt;text-autospace:ideograph-numeric;mso-pagination:none;
-text-align:justify;text-justify:inter-ideograph;" ><span style="mso-spacerun:'yes';font-family:·ÂËÎ_GB2312;mso-ascii-font-family:'Times New Roman';
+text-align:justify;text-justify:inter-ideograph;" ><span style="mso-spacerun:'yes';font-family:ä»¿å®‹_GB2312;mso-ascii-font-family:'Times New Roman';
 mso-hansi-font-family:'Times New Roman';mso-bidi-font-family:'Times New Roman';font-size:14.0000pt;
 mso-font-kerning:1.0000pt;" ><o:p>&nbsp;</o:p></span></p><p class=MsoNormal  align=justify  style="text-indent:32.0000pt;text-autospace:ideograph-numeric;mso-pagination:none;
-text-align:justify;text-justify:inter-ideograph;" ><span style="mso-spacerun:'yes';font-family:·ÂËÎ_GB2312;mso-ascii-font-family:'Times New Roman';
+text-align:justify;text-justify:inter-ideograph;" ><span style="mso-spacerun:'yes';font-family:ä»¿å®‹_GB2312;mso-ascii-font-family:'Times New Roman';
 mso-hansi-font-family:'Times New Roman';mso-bidi-font-family:'Times New Roman';font-size:16.0000pt;
-mso-font-kerning:1.0000pt;" ><font face="·ÂËÎ_GB2312" >ÎªÓ­½Ó½ÌÓı²¿±¾¿Æ½ÌÑ§¹¤×÷ºÏ¸ñÆÀ¹À£¬³ä·ÖÕ¹Ê¾Ñ§Ğ£µÄ°ìÑ§ÌØÉ«ºÍÀúÊ·»ıµí£¬¸ù¾İÑ§Ğ£°²ÅÅ£¬ÓÉ·¢Õ¹¹æ»®´¦Ç£Í·£¬Ğ­Í¬Ğû´«²¿¡¢ºóÇÚ´¦¡¢ÒÕÊõÑ§Ôº¡¢ÂÃÓÎÑ§ÔºµÈµ¥Î»£¬ÀúÊ±½üÒ»Äê£¬³ï»®½¨³É¼«¸»Ğ£±¾ÌØÉ«µÄĞ£ÆóºÏ×÷¹İ¡£¸Ã¹İÒÔ</font>¡°Ğ£ÆóºÏ×÷¡¢ÈË²ÅÅàÑø¡±ÎªÃ÷Ïß¡¢¡°ºìÉ«»ùÒò¡¢Á¢µÂÊ÷ÈË¡±Îª°µÏß£¬ÒÔ¡°ÏÔÀíÄî¡¢ÏÔÄ£Ê½¡¢ÏÔ×÷·¨¡¢ÏÔ³ÉĞ§¡¢ÏÔÓ°Ïì¡±Îª×ÚÖ¼£¬Í¨¹ı¡°½²¹ÊÊÂ¡¢½²ÈËÎï¡¢½²¾«Éñ¡±µÈĞÎÊ½£¬È«Ãæ×Ü½áÁËÑ§Ğ£ÊıÊ®Äê°ìÑ§µÄ²»Ğ¸Ì½Ë÷ºÍ»Ô»Í³É¾Í¡£¸Ã¹İµÃµ½½ÌÓı²¿ÆÀ¹À×¨¼ÒµÄ¸ß¶ÈÆÀ¼Û£¬ÎªË³ÀûÍ¨¹ıºÏ¸ñÆÀ¹ÀÌá¹©ÁËÖØÒªÖ§³Å£¬²¢ÎªÑ§Ğ£´î½¨ÁËÒ»¸ö³¤ÆÚ¿ªÕ¹Ë¼Õş½ÌÓıºÍ¶ÔÍâ½»Á÷µÄ</span><img width="547"  height="365"  src="3.Ğ£ÆóºÏ×÷¹İ½¨ÉèÏîÄ¿¼ò½é.files/3.Ğ£ÆóºÏ×÷¹İ½¨ÉèÏîÄ¿¼ò½é268.png" ><img width="553"  height="415"  src="3.Ğ£ÆóºÏ×÷¹İ½¨ÉèÏîÄ¿¼ò½é.files/3.Ğ£ÆóºÏ×÷¹İ½¨ÉèÏîÄ¿¼ò½é269.png" ><span style="mso-spacerun:'yes';font-family:·ÂËÎ_GB2312;mso-ascii-font-family:'Times New Roman';
+mso-font-kerning:1.0000pt;" ><font face="ä»¿å®‹_GB2312" >ä¸ºè¿æ¥æ•™è‚²éƒ¨æœ¬ç§‘æ•™å­¦å·¥ä½œåˆæ ¼è¯„ä¼°ï¼Œå……åˆ†å±•ç¤ºå­¦æ ¡çš„åŠå­¦ç‰¹è‰²å’Œå†å²ç§¯æ·€ï¼Œæ ¹æ®å­¦æ ¡å®‰æ’ï¼Œç”±å‘å±•è§„åˆ’å¤„ç‰µå¤´ï¼ŒååŒå®£ä¼ éƒ¨ã€åå‹¤å¤„ã€è‰ºæœ¯å­¦é™¢ã€æ—…æ¸¸å­¦é™¢ç­‰å•ä½ï¼Œå†æ—¶è¿‘ä¸€å¹´ï¼Œç­¹åˆ’å»ºæˆæå¯Œæ ¡æœ¬ç‰¹è‰²çš„æ ¡ä¼åˆä½œé¦†ã€‚è¯¥é¦†ä»¥</font>â€œæ ¡ä¼åˆä½œã€äººæ‰åŸ¹å…»â€ä¸ºæ˜çº¿ã€â€œçº¢è‰²åŸºå› ã€ç«‹å¾·æ ‘äººâ€ä¸ºæš—çº¿ï¼Œä»¥â€œæ˜¾ç†å¿µã€æ˜¾æ¨¡å¼ã€æ˜¾ä½œæ³•ã€æ˜¾æˆæ•ˆã€æ˜¾å½±å“â€ä¸ºå®—æ—¨ï¼Œé€šè¿‡â€œè®²æ•…äº‹ã€è®²äººç‰©ã€è®²ç²¾ç¥â€ç­‰å½¢å¼ï¼Œå…¨é¢æ€»ç»“äº†å­¦æ ¡æ•°åå¹´åŠå­¦çš„ä¸æ‡ˆæ¢ç´¢å’Œè¾‰ç…Œæˆå°±ã€‚è¯¥é¦†å¾—åˆ°æ•™è‚²éƒ¨è¯„ä¼°ä¸“å®¶çš„é«˜åº¦è¯„ä»·ï¼Œä¸ºé¡ºåˆ©é€šè¿‡åˆæ ¼è¯„ä¼°æä¾›äº†é‡è¦æ”¯æ’‘ï¼Œå¹¶ä¸ºå­¦æ ¡æ­å»ºäº†ä¸€ä¸ªé•¿æœŸå¼€å±•æ€æ”¿æ•™è‚²å’Œå¯¹å¤–äº¤æµçš„</span><img width="547"  height="365"  src="3.æ ¡ä¼åˆä½œé¦†å»ºè®¾é¡¹ç›®ç®€ä»‹.files/3.æ ¡ä¼åˆä½œé¦†å»ºè®¾é¡¹ç›®ç®€ä»‹268.png" ><img width="553"  height="415"  src="3.æ ¡ä¼åˆä½œé¦†å»ºè®¾é¡¹ç›®ç®€ä»‹.files/3.æ ¡ä¼åˆä½œé¦†å»ºè®¾é¡¹ç›®ç®€ä»‹269.png" ><span style="mso-spacerun:'yes';font-family:ä»¿å®‹_GB2312;mso-ascii-font-family:'Times New Roman';
 mso-hansi-font-family:'Times New Roman';mso-bidi-font-family:'Times New Roman';font-size:16.0000pt;
-mso-font-kerning:1.0000pt;" ><font face="·ÂËÎ_GB2312" >Æ½Ì¨¡£</font> &nbsp;&nbsp;</span><span style="mso-spacerun:'yes';font-family:·ÂËÎ_GB2312;mso-ascii-font-family:'Times New Roman';
+mso-font-kerning:1.0000pt;" ><font face="ä»¿å®‹_GB2312" >å¹³å°ã€‚</font> &nbsp;&nbsp;</span><span style="mso-spacerun:'yes';font-family:ä»¿å®‹_GB2312;mso-ascii-font-family:'Times New Roman';
 mso-hansi-font-family:'Times New Roman';mso-bidi-font-family:'Times New Roman';font-size:16.0000pt;
 mso-font-kerning:1.0000pt;" ><o:p></o:p></span></p></div><!--EndFragment--></body></html>
