--- a/formatPages/6.英才家属区立户手续办理.html
+++ b/formatPages/6.英才家属区立户手续办理.html
@@ -1,5 +1,5 @@
 
-<html xmlns:o="urn:schemas-microsoft-com:office:office" xmlns:w="urn:schemas-microsoft-com:office:word" xmlns:dt="uuid:C2F41010-65B3-11d1-A29F-00AA00C14882" xmlns="http://www.w3.org/TR/REC-html40"><head><meta http-equiv=Content-Type  content="text/html; charset=gb2312" ><meta name=ProgId  content=Word.Document ><meta name=Generator  content="Microsoft Word 14" ><meta name=Originator  content="Microsoft Word 14" ><title></title><!--[if gte mso 9]><xml><o:DocumentProperties><o:Author>4</o:Author><o:LastAuthor>Ö½É¡ÏÂµÄÑÌÓê</o:LastAuthor><o:Revision>1</o:Revision><o:Pages>1</o:Pages></o:DocumentProperties><o:CustomDocumentProperties><o:KSOProductBuildVer dt:dt="string" >2052-11.1.0.11194</o:KSOProductBuildVer><o:ICV dt:dt="string" >4E3A4A8D4D094F5E81D7367FEECD8EC3</o:ICV></o:CustomDocumentProperties></xml><![endif]--><!--[if gte mso 9]><xml><o:OfficeDocumentSettings></o:OfficeDocumentSettings></xml><![endif]--><!--[if gte mso 9]><xml><w:WordDocument><w:BrowserLevel>MicrosoftInternetExplorer4</w:BrowserLevel><w:DisplayHorizontalDrawingGridEvery>0</w:DisplayHorizontalDrawingGridEvery><w:DisplayVerticalDrawingGridEvery>2</w:DisplayVerticalDrawingGridEvery><w:DocumentKind>DocumentNotSpecified</w:DocumentKind><w:DrawingGridVerticalSpacing>7.8 °õ</w:DrawingGridVerticalSpacing><w:PunctuationKerning></w:PunctuationKerning><w:View>Web</w:View><w:Compatibility><w:AdjustLineHeightInTable/><w:DontGrowAutofit/><w:BalanceSingleByteDoubleByteWidth/><w:DoNotExpandShiftReturn/><w:UseFELayout/></w:Compatibility><w:Zoom>0</w:Zoom></w:WordDocument></xml><![endif]--><!--[if gte mso 9]><xml><w:LatentStyles DefLockedState="false"  DefUnhideWhenUsed="true"  DefSemiHidden="true"  DefQFormat="false"  DefPriority="99"  LatentStyleCount="260" >
+<html xmlns:o="urn:schemas-microsoft-com:office:office" xmlns:w="urn:schemas-microsoft-com:office:word" xmlns:dt="uuid:C2F41010-65B3-11d1-A29F-00AA00C14882" xmlns="http://www.w3.org/TR/REC-html40"><head><meta http-equiv=Content-Type  content="text/html; charset=utf8" ><meta name=ProgId  content=Word.Document ><meta name=Generator  content="Microsoft Word 14" ><meta name=Originator  content="Microsoft Word 14" ><title></title><!--[if gte mso 9]><xml><o:DocumentProperties><o:Author>4</o:Author><o:LastAuthor>çº¸ä¼žä¸‹çš„çƒŸé›¨</o:LastAuthor><o:Revision>1</o:Revision><o:Pages>1</o:Pages></o:DocumentProperties><o:CustomDocumentProperties><o:KSOProductBuildVer dt:dt="string" >2052-11.1.0.11194</o:KSOProductBuildVer><o:ICV dt:dt="string" >4E3A4A8D4D094F5E81D7367FEECD8EC3</o:ICV></o:CustomDocumentProperties></xml><![endif]--><!--[if gte mso 9]><xml><o:OfficeDocumentSettings></o:OfficeDocumentSettings></xml><![endif]--><!--[if gte mso 9]><xml><w:WordDocument><w:BrowserLevel>MicrosoftInternetExplorer4</w:BrowserLevel><w:DisplayHorizontalDrawingGridEvery>0</w:DisplayHorizontalDrawingGridEvery><w:DisplayVerticalDrawingGridEvery>2</w:DisplayVerticalDrawingGridEvery><w:DocumentKind>DocumentNotSpecified</w:DocumentKind><w:DrawingGridVerticalSpacing>7.8 ç£…</w:DrawingGridVerticalSpacing><w:PunctuationKerning></w:PunctuationKerning><w:View>Web</w:View><w:Compatibility><w:AdjustLineHeightInTable/><w:DontGrowAutofit/><w:BalanceSingleByteDoubleByteWidth/><w:DoNotExpandShiftReturn/><w:UseFELayout/></w:Compatibility><w:Zoom>0</w:Zoom></w:WordDocument></xml><![endif]--><!--[if gte mso 9]><xml><w:LatentStyles DefLockedState="false"  DefUnhideWhenUsed="true"  DefSemiHidden="true"  DefQFormat="false"  DefPriority="99"  LatentStyleCount="260" >
     <w:LsdException Locked="false"  Priority="0"  SemiHidden="false"  UnhideWhenUsed="false"  QFormat="true"  Name="Normal" ></w:LsdException>
 <w:LsdException Locked="false"  Priority="0"  SemiHidden="false"  UnhideWhenUsed="false"  QFormat="true"  Name="heading 1" ></w:LsdException>
 <w:LsdException Locked="false"  Priority="0"  SemiHidden="false"  QFormat="true"  Name="heading 2" ></w:LsdException>
@@ -263,7 +263,7 @@ font-family:"Times New Roman";
 }
 
 @font-face{
-font-family:"ËÎÌå";
+font-family:"å®‹ä½“";
 }
 
 @font-face{
@@ -275,19 +275,19 @@ font-family:"Wingdings";
 }
 
 @font-face{
-font-family:"ºÚÌå";
+font-family:"é»‘ä½“";
 }
 
 @font-face{
-font-family:"·ÂËÎ";
+font-family:"ä»¿å®‹";
 }
 
 @font-face{
-font-family:"·ÂËÎ_GB2312";
+font-family:"ä»¿å®‹_GB2312";
 }
 
 p.MsoNormal{
-mso-style-name:ÕýÎÄ;
+mso-style-name:æ­£æ–‡;
 mso-style-parent:"";
 margin:0pt;
 margin-bottom:.0001pt;
@@ -295,7 +295,7 @@ mso-pagination:none;
 text-align:justify;
 text-justify:inter-ideograph;
 font-family:Calibri;
-mso-fareast-font-family:ËÎÌå;
+mso-fareast-font-family:å®‹ä½“;
 mso-bidi-font-family:'Times New Roman';
 font-size:10.5000pt;
 mso-font-kerning:1.0000pt;
@@ -321,7 +321,7 @@ color:red;
 }
 
 table.MsoNormalTable{
-mso-style-name:ÆÕÍ¨±í¸ñ;
+mso-style-name:æ™®é€šè¡¨æ ¼;
 mso-style-parent:"";
 mso-style-noshow:yes;
 mso-tstyle-rowband-size:0;
@@ -347,45 +347,45 @@ layout-grid:15.6000pt;
 mso-header-margin:42.5500pt;
 mso-footer-margin:49.6000pt;
 }
-div.Section0{page:Section0;}</style></head><body style="tab-interval:21pt;text-justify-trim:punctuation;" ><!--StartFragment--><div class="Section0"  style="layout-grid:15.6000pt;" ><p class=MsoNormal  align=center  style="text-autospace:ideograph-numeric;mso-pagination:none;text-align:center;" ><span style="mso-spacerun:'yes';font-family:ºÚÌå;font-size:18.0000pt;
-mso-font-kerning:1.0000pt;" ><font face="ºÚÌå" >Ð¡Ð¡</font></span><span style="mso-spacerun:'yes';font-family:ºÚÌå;font-size:18.0000pt;
-mso-font-kerning:1.0000pt;" ><font face="ºÚÌå" >»§¿Ú±¾ÅÅ</font></span><span style="mso-spacerun:'yes';font-family:ºÚÌå;font-size:18.0000pt;
-mso-font-kerning:1.0000pt;" ><font face="ºÚÌå" >½â°Ù</font></span><span style="mso-spacerun:'yes';font-family:ºÚÌå;font-size:18.0000pt;
-mso-font-kerning:1.0000pt;" ><font face="ºÚÌå" >»§ÓÇ</font></span><span style="mso-spacerun:'yes';font-family:ºÚÌå;font-size:18.0000pt;
-mso-font-kerning:1.0000pt;" ><o:p></o:p></span></p><p class=MsoNormal  align=right  style="text-autospace:ideograph-numeric;mso-pagination:none;text-align:right;" ><span style="mso-spacerun:'yes';font-family:ºÚÌå;font-size:14.0000pt;
-mso-font-kerning:1.0000pt;" ><font face="ºÚÌå" >¡ª¡ª</font></span><span style="mso-spacerun:'yes';font-family:ºÚÌå;font-size:14.0000pt;
-mso-font-kerning:1.0000pt;" ><font face="ºÚÌå" >Ó¢²Å¼ÒÊôÇøÁ¢»§ÊÖÐø°ìÀíÏîÄ¿¼ò½é</font></span><span style="mso-spacerun:'yes';font-family:ºÚÌå;font-size:14.0000pt;
+div.Section0{page:Section0;}</style></head><body style="tab-interval:21pt;text-justify-trim:punctuation;" ><!--StartFragment--><div class="Section0"  style="layout-grid:15.6000pt;" ><p class=MsoNormal  align=center  style="text-autospace:ideograph-numeric;mso-pagination:none;text-align:center;" ><span style="mso-spacerun:'yes';font-family:é»‘ä½“;font-size:18.0000pt;
+mso-font-kerning:1.0000pt;" ><font face="é»‘ä½“" >å°å°</font></span><span style="mso-spacerun:'yes';font-family:é»‘ä½“;font-size:18.0000pt;
+mso-font-kerning:1.0000pt;" ><font face="é»‘ä½“" >æˆ·å£æœ¬æŽ’</font></span><span style="mso-spacerun:'yes';font-family:é»‘ä½“;font-size:18.0000pt;
+mso-font-kerning:1.0000pt;" ><font face="é»‘ä½“" >è§£ç™¾</font></span><span style="mso-spacerun:'yes';font-family:é»‘ä½“;font-size:18.0000pt;
+mso-font-kerning:1.0000pt;" ><font face="é»‘ä½“" >æˆ·å¿§</font></span><span style="mso-spacerun:'yes';font-family:é»‘ä½“;font-size:18.0000pt;
+mso-font-kerning:1.0000pt;" ><o:p></o:p></span></p><p class=MsoNormal  align=right  style="text-autospace:ideograph-numeric;mso-pagination:none;text-align:right;" ><span style="mso-spacerun:'yes';font-family:é»‘ä½“;font-size:14.0000pt;
+mso-font-kerning:1.0000pt;" ><font face="é»‘ä½“" >â€”â€”</font></span><span style="mso-spacerun:'yes';font-family:é»‘ä½“;font-size:14.0000pt;
+mso-font-kerning:1.0000pt;" ><font face="é»‘ä½“" >è‹±æ‰å®¶å±žåŒºç«‹æˆ·æ‰‹ç»­åŠžç†é¡¹ç›®ç®€ä»‹</font></span><span style="mso-spacerun:'yes';font-family:é»‘ä½“;font-size:14.0000pt;
 mso-font-kerning:1.0000pt;" ><o:p></o:p></span></p><p class=MsoNormal  style="text-indent:28.0000pt;mso-char-indent-count:2.0000;text-autospace:ideograph-numeric;
-mso-pagination:none;" ><span style="mso-spacerun:'yes';font-family:·ÂËÎ;font-size:14.0000pt;
-mso-font-kerning:1.0000pt;" ><font face="·ÂËÎ" >2007ÄêÎÒÐ£Ó¢²ÅÐ£Çø</font></span><span style="mso-spacerun:'yes';font-family:·ÂËÎ;font-size:14.0000pt;
-mso-font-kerning:1.0000pt;" ><font face="·ÂËÎ" >½ÌÖ°¹¤</font></span><span style="mso-spacerun:'yes';font-family:·ÂËÎ;font-size:14.0000pt;
-mso-font-kerning:1.0000pt;" ><font face="·ÂËÎ" >¼ÒÊôÇø¿ª½¨</font></span><span style="mso-spacerun:'yes';font-family:·ÂËÎ;font-size:14.0000pt;
-mso-font-kerning:1.0000pt;" ><font face="·ÂËÎ" >£¬</font></span><span style="mso-spacerun:'yes';font-family:·ÂËÎ;font-size:14.0000pt;
-mso-font-kerning:1.0000pt;" ><font face="·ÂËÎ" >Ö±ÖÁ</font>2020Äê</span><span style="mso-spacerun:'yes';font-family:·ÂËÎ;font-size:14.0000pt;
-mso-font-kerning:1.0000pt;" ><font face="·ÂËÎ" >£¬¼ÒÊôÇø½ü</font>700»§½ÌÖ°¹¤¼°¼ÒÊôÊ¼ÖÕÎÞ·¨Âä»§¼ÒÊôÇø</span><span style="mso-spacerun:'yes';font-family:·ÂËÎ;font-size:14.0000pt;
-mso-font-kerning:1.0000pt;" ><font face="·ÂËÎ" >£¬</font></span><span style="mso-spacerun:'yes';font-family:·ÂËÎ;font-size:14.0000pt;
-mso-font-kerning:1.0000pt;" ><font face="·ÂËÎ" >Îª¾ÓÃñÉú»î´øÀ´Öî¶à²»±ã</font></span><span style="mso-spacerun:'yes';font-family:·ÂËÎ;font-size:14.0000pt;
-mso-font-kerning:1.0000pt;" ><font face="·ÂËÎ" >¡£×Ôµ³Ê·Ñ§Ï°½ÌÓý</font></span><span style="mso-spacerun:'yes';font-family:·ÂËÎ;font-size:14.0000pt;
-mso-font-kerning:1.0000pt;" ><font face="·ÂËÎ" >»î¶¯</font></span><span style="mso-spacerun:'yes';font-family:·ÂËÎ;font-size:14.0000pt;
-mso-font-kerning:1.0000pt;" ><font face="·ÂËÎ" >¿ªÕ¹ÒÔÀ´£¬±£ÎÀ´¦Ê¼ÖÕÖØÊÓµ³Ê·Ñ§Ï°½ÌÓý£¬²»¶Ï¼ÓÇ¿Ñ§Ï°Á¦¶È£¬Í¬Ê±½«µ³Ê·Ñ§Ï°½ÌÓý³É¹û×ª»¯ÎªÎªÃñ·þÎñµÄÊµ¼ÊÐÐ¶¯£¬»ý¼«¿ªÕ¹</font>¡°ÎÒÎªÈºÖÚ°ìÊµÊÂ¡±Êµ¼ù»î¶¯</span><span style="mso-spacerun:'yes';font-family:·ÂËÎ;font-size:14.0000pt;
-mso-font-kerning:1.0000pt;" ><font face="·ÂËÎ" >¡£</font></span><span style="mso-spacerun:'yes';font-family:·ÂËÎ;font-size:14.0000pt;
-mso-font-kerning:1.0000pt;" ><font face="·ÂËÎ" >Õë¶ÔÓ¢²Å¼ÒÊôÇøÎÞ·¨Âä»§µÄÎÊÌâ£¬</font></span><span style="mso-spacerun:'yes';font-family:·ÂËÎ;font-size:14.0000pt;
-mso-font-kerning:1.0000pt;" ><font face="·ÂËÎ" >±£ÎÀ´¦</font></span><span style="mso-spacerun:'yes';font-family:·ÂËÎ;font-size:14.0000pt;
-mso-font-kerning:1.0000pt;" ><font face="·ÂËÎ" >Ô­´¦³¤È¨Ì«¾Ù¡¢¸±´¦³¤·®Ô¥½Ü</font></span><span style="mso-spacerun:'yes';font-family:·ÂËÎ;font-size:14.0000pt;
-mso-font-kerning:1.0000pt;" ><font face="·ÂËÎ" >ºÍÏ½ÇøÅÉ³öËù¡¢ÉÏ¼¶¹«°²²¿ÃÅ²»¶ÏÐ­µ÷£¬ÖÕÓÚÓÚ</font>2020Äê</span><span style="mso-spacerun:'yes';font-family:·ÂËÎ;font-size:14.0000pt;
-mso-font-kerning:1.0000pt;" ><font face="·ÂËÎ" >12ÔÂ</font></span><span style="mso-spacerun:'yes';font-family:·ÂËÎ;font-size:14.0000pt;
-mso-font-kerning:1.0000pt;" ><font face="·ÂËÎ" >£¬</font></span><span style="mso-spacerun:'yes';font-family:·ÂËÎ;font-size:14.0000pt;
-mso-font-kerning:1.0000pt;" ><font face="·ÂËÎ" >ÓÉ</font></span><span style="mso-spacerun:'yes';font-family:·ÂËÎ;font-size:14.0000pt;
-mso-font-kerning:1.0000pt;" ><font face="·ÂËÎ" >±£ÎÀ´¦¼¼·À¿Æ£¨»§¼®¿Æ£©</font></span><span style="mso-spacerun:'yes';font-family:·ÂËÎ;font-size:14.0000pt;
-mso-font-kerning:1.0000pt;" ><font face="·ÂËÎ" >¸±¿Æ³¤Ò¦Ñþ</font></span><span style="mso-spacerun:'yes';font-family:·ÂËÎ;font-size:14.0000pt;
-mso-font-kerning:1.0000pt;" ><font face="·ÂËÎ" >ÔÚÓ­±öÂ·ÅÉ³öËù³É¹¦ÎªÓ¢²Å½ÌÖ°¹¤¼ÒÊôÇø</font></span><span style="mso-spacerun:'yes';font-family:·ÂËÎ;font-size:14.0000pt;
-mso-font-kerning:1.0000pt;" ><font face="·ÂËÎ" >Ò»»§¾ÓÃñ°ìÀíÁË¼ÒÊôÇø»§¿Ú±¾</font></span><span style="mso-spacerun:'yes';font-family:·ÂËÎ;font-size:14.0000pt;
-mso-font-kerning:1.0000pt;" ><font face="·ÂËÎ" >¡£½ØÖÁ</font></span><span style="mso-spacerun:'yes';font-family:·ÂËÎ;font-size:14.0000pt;
-mso-font-kerning:1.0000pt;" ><font face="·ÂËÎ" >2022Äê1</font></span><span style="mso-spacerun:'yes';font-family:·ÂËÎ;font-size:14.0000pt;
-mso-font-kerning:1.0000pt;" ><font face="·ÂËÎ" >ÔÂ</font>20ÈÕ£¬±£ÎÀ´¦ÒÑÎª</span><span style="mso-spacerun:'yes';font-family:·ÂËÎ;font-size:14.0000pt;
-mso-font-kerning:1.0000pt;" ><font face="·ÂËÎ" >Ó¢²Å¼ÒÊôÇø</font></span><span style="mso-spacerun:'yes';font-family:·ÂËÎ;font-size:14.0000pt;
-mso-font-kerning:1.0000pt;" ><font face="·ÂËÎ" >24»§½ÌÖ°¹¤°ìÀíÁËÁ¢»§ÊÖÐø¡£</font></span><span style="mso-spacerun:'yes';font-family:·ÂËÎ;font-size:14.0000pt;
-mso-font-kerning:1.0000pt;" ><o:p></o:p></span></p><p class=MsoNormal  align=center  style="text-autospace:ideograph-numeric;mso-pagination:none;text-align:center;" ><img width="554"  height="416"  src="6.Ó¢²Å¼ÒÊôÇøÁ¢»§ÊÖÐø°ìÀí.files/6.Ó¢²Å¼ÒÊôÇøÁ¢»§ÊÖÐø°ìÀí320.png" ><span style="mso-spacerun:'yes';font-family:·ÂËÎ_GB2312;font-size:15.0000pt;
-mso-font-kerning:1.0000pt;" ><o:p>&nbsp;</o:p></span></p><p class=MsoNormal  align=center  style="text-autospace:ideograph-numeric;mso-pagination:none;text-align:center;" ><img width="554"  height="416"  src="6.Ó¢²Å¼ÒÊôÇøÁ¢»§ÊÖÐø°ìÀí.files/6.Ó¢²Å¼ÒÊôÇøÁ¢»§ÊÖÐø°ìÀí322.png" ><span style="mso-spacerun:'yes';font-family:·ÂËÎ_GB2312;font-size:15.0000pt;
-mso-font-kerning:1.0000pt;" ><o:p>&nbsp;</o:p></span></p><p class=MsoNormal  style="text-autospace:ideograph-numeric;mso-pagination:none;" ><span style="mso-spacerun:'yes';font-family:·ÂËÎ;font-size:14.0000pt;
+mso-pagination:none;" ><span style="mso-spacerun:'yes';font-family:ä»¿å®‹;font-size:14.0000pt;
+mso-font-kerning:1.0000pt;" ><font face="ä»¿å®‹" >2007å¹´æˆ‘æ ¡è‹±æ‰æ ¡åŒº</font></span><span style="mso-spacerun:'yes';font-family:ä»¿å®‹;font-size:14.0000pt;
+mso-font-kerning:1.0000pt;" ><font face="ä»¿å®‹" >æ•™èŒå·¥</font></span><span style="mso-spacerun:'yes';font-family:ä»¿å®‹;font-size:14.0000pt;
+mso-font-kerning:1.0000pt;" ><font face="ä»¿å®‹" >å®¶å±žåŒºå¼€å»º</font></span><span style="mso-spacerun:'yes';font-family:ä»¿å®‹;font-size:14.0000pt;
+mso-font-kerning:1.0000pt;" ><font face="ä»¿å®‹" >ï¼Œ</font></span><span style="mso-spacerun:'yes';font-family:ä»¿å®‹;font-size:14.0000pt;
+mso-font-kerning:1.0000pt;" ><font face="ä»¿å®‹" >ç›´è‡³</font>2020å¹´</span><span style="mso-spacerun:'yes';font-family:ä»¿å®‹;font-size:14.0000pt;
+mso-font-kerning:1.0000pt;" ><font face="ä»¿å®‹" >ï¼Œå®¶å±žåŒºè¿‘</font>700æˆ·æ•™èŒå·¥åŠå®¶å±žå§‹ç»ˆæ— æ³•è½æˆ·å®¶å±žåŒº</span><span style="mso-spacerun:'yes';font-family:ä»¿å®‹;font-size:14.0000pt;
+mso-font-kerning:1.0000pt;" ><font face="ä»¿å®‹" >ï¼Œ</font></span><span style="mso-spacerun:'yes';font-family:ä»¿å®‹;font-size:14.0000pt;
+mso-font-kerning:1.0000pt;" ><font face="ä»¿å®‹" >ä¸ºå±…æ°‘ç”Ÿæ´»å¸¦æ¥è¯¸å¤šä¸ä¾¿</font></span><span style="mso-spacerun:'yes';font-family:ä»¿å®‹;font-size:14.0000pt;
+mso-font-kerning:1.0000pt;" ><font face="ä»¿å®‹" >ã€‚è‡ªå…šå²å­¦ä¹ æ•™è‚²</font></span><span style="mso-spacerun:'yes';font-family:ä»¿å®‹;font-size:14.0000pt;
+mso-font-kerning:1.0000pt;" ><font face="ä»¿å®‹" >æ´»åŠ¨</font></span><span style="mso-spacerun:'yes';font-family:ä»¿å®‹;font-size:14.0000pt;
+mso-font-kerning:1.0000pt;" ><font face="ä»¿å®‹" >å¼€å±•ä»¥æ¥ï¼Œä¿å«å¤„å§‹ç»ˆé‡è§†å…šå²å­¦ä¹ æ•™è‚²ï¼Œä¸æ–­åŠ å¼ºå­¦ä¹ åŠ›åº¦ï¼ŒåŒæ—¶å°†å…šå²å­¦ä¹ æ•™è‚²æˆæžœè½¬åŒ–ä¸ºä¸ºæ°‘æœåŠ¡çš„å®žé™…è¡ŒåŠ¨ï¼Œç§¯æžå¼€å±•</font>â€œæˆ‘ä¸ºç¾¤ä¼—åŠžå®žäº‹â€å®žè·µæ´»åŠ¨</span><span style="mso-spacerun:'yes';font-family:ä»¿å®‹;font-size:14.0000pt;
+mso-font-kerning:1.0000pt;" ><font face="ä»¿å®‹" >ã€‚</font></span><span style="mso-spacerun:'yes';font-family:ä»¿å®‹;font-size:14.0000pt;
+mso-font-kerning:1.0000pt;" ><font face="ä»¿å®‹" >é’ˆå¯¹è‹±æ‰å®¶å±žåŒºæ— æ³•è½æˆ·çš„é—®é¢˜ï¼Œ</font></span><span style="mso-spacerun:'yes';font-family:ä»¿å®‹;font-size:14.0000pt;
+mso-font-kerning:1.0000pt;" ><font face="ä»¿å®‹" >ä¿å«å¤„</font></span><span style="mso-spacerun:'yes';font-family:ä»¿å®‹;font-size:14.0000pt;
+mso-font-kerning:1.0000pt;" ><font face="ä»¿å®‹" >åŽŸå¤„é•¿æƒå¤ªä¸¾ã€å‰¯å¤„é•¿æ¨Šè±«æ°</font></span><span style="mso-spacerun:'yes';font-family:ä»¿å®‹;font-size:14.0000pt;
+mso-font-kerning:1.0000pt;" ><font face="ä»¿å®‹" >å’Œè¾–åŒºæ´¾å‡ºæ‰€ã€ä¸Šçº§å…¬å®‰éƒ¨é—¨ä¸æ–­åè°ƒï¼Œç»ˆäºŽäºŽ</font>2020å¹´</span><span style="mso-spacerun:'yes';font-family:ä»¿å®‹;font-size:14.0000pt;
+mso-font-kerning:1.0000pt;" ><font face="ä»¿å®‹" >12æœˆ</font></span><span style="mso-spacerun:'yes';font-family:ä»¿å®‹;font-size:14.0000pt;
+mso-font-kerning:1.0000pt;" ><font face="ä»¿å®‹" >ï¼Œ</font></span><span style="mso-spacerun:'yes';font-family:ä»¿å®‹;font-size:14.0000pt;
+mso-font-kerning:1.0000pt;" ><font face="ä»¿å®‹" >ç”±</font></span><span style="mso-spacerun:'yes';font-family:ä»¿å®‹;font-size:14.0000pt;
+mso-font-kerning:1.0000pt;" ><font face="ä»¿å®‹" >ä¿å«å¤„æŠ€é˜²ç§‘ï¼ˆæˆ·ç±ç§‘ï¼‰</font></span><span style="mso-spacerun:'yes';font-family:ä»¿å®‹;font-size:14.0000pt;
+mso-font-kerning:1.0000pt;" ><font face="ä»¿å®‹" >å‰¯ç§‘é•¿å§šç‘¶</font></span><span style="mso-spacerun:'yes';font-family:ä»¿å®‹;font-size:14.0000pt;
+mso-font-kerning:1.0000pt;" ><font face="ä»¿å®‹" >åœ¨è¿Žå®¾è·¯æ´¾å‡ºæ‰€æˆåŠŸä¸ºè‹±æ‰æ•™èŒå·¥å®¶å±žåŒº</font></span><span style="mso-spacerun:'yes';font-family:ä»¿å®‹;font-size:14.0000pt;
+mso-font-kerning:1.0000pt;" ><font face="ä»¿å®‹" >ä¸€æˆ·å±…æ°‘åŠžç†äº†å®¶å±žåŒºæˆ·å£æœ¬</font></span><span style="mso-spacerun:'yes';font-family:ä»¿å®‹;font-size:14.0000pt;
+mso-font-kerning:1.0000pt;" ><font face="ä»¿å®‹" >ã€‚æˆªè‡³</font></span><span style="mso-spacerun:'yes';font-family:ä»¿å®‹;font-size:14.0000pt;
+mso-font-kerning:1.0000pt;" ><font face="ä»¿å®‹" >2022å¹´1</font></span><span style="mso-spacerun:'yes';font-family:ä»¿å®‹;font-size:14.0000pt;
+mso-font-kerning:1.0000pt;" ><font face="ä»¿å®‹" >æœˆ</font>20æ—¥ï¼Œä¿å«å¤„å·²ä¸º</span><span style="mso-spacerun:'yes';font-family:ä»¿å®‹;font-size:14.0000pt;
+mso-font-kerning:1.0000pt;" ><font face="ä»¿å®‹" >è‹±æ‰å®¶å±žåŒº</font></span><span style="mso-spacerun:'yes';font-family:ä»¿å®‹;font-size:14.0000pt;
+mso-font-kerning:1.0000pt;" ><font face="ä»¿å®‹" >24æˆ·æ•™èŒå·¥åŠžç†äº†ç«‹æˆ·æ‰‹ç»­ã€‚</font></span><span style="mso-spacerun:'yes';font-family:ä»¿å®‹;font-size:14.0000pt;
+mso-font-kerning:1.0000pt;" ><o:p></o:p></span></p><p class=MsoNormal  align=center  style="text-autospace:ideograph-numeric;mso-pagination:none;text-align:center;" ><img width="554"  height="416"  src="6.è‹±æ‰å®¶å±žåŒºç«‹æˆ·æ‰‹ç»­åŠžç†.files/6.è‹±æ‰å®¶å±žåŒºç«‹æˆ·æ‰‹ç»­åŠžç†320.png" ><span style="mso-spacerun:'yes';font-family:ä»¿å®‹_GB2312;font-size:15.0000pt;
+mso-font-kerning:1.0000pt;" ><o:p>&nbsp;</o:p></span></p><p class=MsoNormal  align=center  style="text-autospace:ideograph-numeric;mso-pagination:none;text-align:center;" ><img width="554"  height="416"  src="6.è‹±æ‰å®¶å±žåŒºç«‹æˆ·æ‰‹ç»­åŠžç†.files/6.è‹±æ‰å®¶å±žåŒºç«‹æˆ·æ‰‹ç»­åŠžç†322.png" ><span style="mso-spacerun:'yes';font-family:ä»¿å®‹_GB2312;font-size:15.0000pt;
+mso-font-kerning:1.0000pt;" ><o:p>&nbsp;</o:p></span></p><p class=MsoNormal  style="text-autospace:ideograph-numeric;mso-pagination:none;" ><span style="mso-spacerun:'yes';font-family:ä»¿å®‹;font-size:14.0000pt;
 mso-font-kerning:1.0000pt;" ><o:p>&nbsp;</o:p></span></p></div><!--EndFragment--></body></html>
