--- a/formatPages/8.肉羊发展助力乡村振兴.html
+++ b/formatPages/8.肉羊发展助力乡村振兴.html
@@ -1,5 +1,5 @@
 
-<html xmlns:o="urn:schemas-microsoft-com:office:office" xmlns:w="urn:schemas-microsoft-com:office:word" xmlns:dt="uuid:C2F41010-65B3-11d1-A29F-00AA00C14882" xmlns="http://www.w3.org/TR/REC-html40"><head><meta http-equiv=Content-Type  content="text/html; charset=gb2312" ><meta name=ProgId  content=Word.Document ><meta name=Generator  content="Microsoft Word 14" ><meta name=Originator  content="Microsoft Word 14" ><title></title><!--[if gte mso 9]><xml><o:DocumentProperties><o:Author>8613526550080</o:Author><o:LastAuthor>Ö½É¡ÏÂµÄÑÌÓê</o:LastAuthor><o:Revision>1</o:Revision><o:Pages>3</o:Pages><o:Characters>184</o:Characters><o:Lines>1</o:Lines><o:Paragraphs>1</o:Paragraphs></o:DocumentProperties><o:CustomDocumentProperties><o:KSOProductBuildVer dt:dt="string" >2052-11.1.0.11194</o:KSOProductBuildVer><o:ICV dt:dt="string" >786FFB9AA87F4B5AA6ED0F2A1EB66E9B</o:ICV></o:CustomDocumentProperties></xml><![endif]--><!--[if gte mso 9]><xml><o:OfficeDocumentSettings></o:OfficeDocumentSettings></xml><![endif]--><!--[if gte mso 9]><xml><w:WordDocument><w:BrowserLevel>MicrosoftInternetExplorer4</w:BrowserLevel><w:DisplayHorizontalDrawingGridEvery>0</w:DisplayHorizontalDrawingGridEvery><w:DisplayVerticalDrawingGridEvery>2</w:DisplayVerticalDrawingGridEvery><w:DocumentKind>DocumentNotSpecified</w:DocumentKind><w:DrawingGridVerticalSpacing>7.8 °õ</w:DrawingGridVerticalSpacing><w:PunctuationKerning></w:PunctuationKerning><w:View>Web</w:View><w:Compatibility><w:AdjustLineHeightInTable/><w:DontGrowAutofit/><w:BalanceSingleByteDoubleByteWidth/><w:DoNotExpandShiftReturn/><w:UseFELayout/></w:Compatibility><w:Zoom>0</w:Zoom></w:WordDocument></xml><![endif]--><!--[if gte mso 9]><xml><w:LatentStyles DefLockedState="false"  DefUnhideWhenUsed="true"  DefSemiHidden="true"  DefQFormat="false"  DefPriority="99"  LatentStyleCount="260" >
+<html xmlns:o="urn:schemas-microsoft-com:office:office" xmlns:w="urn:schemas-microsoft-com:office:word" xmlns:dt="uuid:C2F41010-65B3-11d1-A29F-00AA00C14882" xmlns="http://www.w3.org/TR/REC-html40"><head><meta http-equiv=Content-Type  content="text/html; charset=utf8" ><meta name=ProgId  content=Word.Document ><meta name=Generator  content="Microsoft Word 14" ><meta name=Originator  content="Microsoft Word 14" ><title></title><!--[if gte mso 9]><xml><o:DocumentProperties><o:Author>8613526550080</o:Author><o:LastAuthor>çº¸ä¼ä¸‹çš„çƒŸé›¨</o:LastAuthor><o:Revision>1</o:Revision><o:Pages>3</o:Pages><o:Characters>184</o:Characters><o:Lines>1</o:Lines><o:Paragraphs>1</o:Paragraphs></o:DocumentProperties><o:CustomDocumentProperties><o:KSOProductBuildVer dt:dt="string" >2052-11.1.0.11194</o:KSOProductBuildVer><o:ICV dt:dt="string" >786FFB9AA87F4B5AA6ED0F2A1EB66E9B</o:ICV></o:CustomDocumentProperties></xml><![endif]--><!--[if gte mso 9]><xml><o:OfficeDocumentSettings></o:OfficeDocumentSettings></xml><![endif]--><!--[if gte mso 9]><xml><w:WordDocument><w:BrowserLevel>MicrosoftInternetExplorer4</w:BrowserLevel><w:DisplayHorizontalDrawingGridEvery>0</w:DisplayHorizontalDrawingGridEvery><w:DisplayVerticalDrawingGridEvery>2</w:DisplayVerticalDrawingGridEvery><w:DocumentKind>DocumentNotSpecified</w:DocumentKind><w:DrawingGridVerticalSpacing>7.8 ç£…</w:DrawingGridVerticalSpacing><w:PunctuationKerning></w:PunctuationKerning><w:View>Web</w:View><w:Compatibility><w:AdjustLineHeightInTable/><w:DontGrowAutofit/><w:BalanceSingleByteDoubleByteWidth/><w:DoNotExpandShiftReturn/><w:UseFELayout/></w:Compatibility><w:Zoom>0</w:Zoom></w:WordDocument></xml><![endif]--><!--[if gte mso 9]><xml><w:LatentStyles DefLockedState="false"  DefUnhideWhenUsed="true"  DefSemiHidden="true"  DefQFormat="false"  DefPriority="99"  LatentStyleCount="260" >
     <w:LsdException Locked="false"  Priority="0"  SemiHidden="false"  UnhideWhenUsed="false"  QFormat="true"  Name="Normal" ></w:LsdException>
 <w:LsdException Locked="false"  Priority="9"  SemiHidden="false"  UnhideWhenUsed="false"  QFormat="true"  Name="heading 1" ></w:LsdException>
 <w:LsdException Locked="false"  Priority="9"  SemiHidden="false"  QFormat="true"  Name="heading 2" ></w:LsdException>
@@ -263,7 +263,7 @@ font-family:"Times New Roman";
 }
 
 @font-face{
-font-family:"ËÎÌå";
+font-family:"å®‹ä½“";
 }
 
 @font-face{
@@ -275,11 +275,11 @@ font-family:"Wingdings";
 }
 
 @font-face{
-font-family:"·ÂËÎ_GB2312";
+font-family:"ä»¿å®‹_GB2312";
 }
 
 p.MsoNormal{
-mso-style-name:ÕıÎÄ;
+mso-style-name:æ­£æ–‡;
 mso-style-parent:"";
 margin:0pt;
 margin-bottom:.0001pt;
@@ -287,7 +287,7 @@ mso-pagination:none;
 text-align:justify;
 text-justify:inter-ideograph;
 font-family:Calibri;
-mso-fareast-font-family:ËÎÌå;
+mso-fareast-font-family:å®‹ä½“;
 mso-bidi-font-family:'Times New Roman';
 font-size:10.5000pt;
 mso-font-kerning:1.0000pt;
@@ -299,7 +299,7 @@ font-family:Calibri;
 
 span.15{
 font-family:Calibri;
-mso-fareast-font-family:ËÎÌå;
+mso-fareast-font-family:å®‹ä½“;
 mso-bidi-font-family:'Times New Roman';
 font-size:9.0000pt;
 }
@@ -315,7 +315,7 @@ font-size:9.0000pt;
 }
 
 p.MsoHeader{
-mso-style-name:Ò³Ã¼;
+mso-style-name:é¡µçœ‰;
 mso-style-noshow:yes;
 margin:0pt;
 margin-bottom:.0001pt;
@@ -326,14 +326,14 @@ layout-grid-mode:char;
 mso-pagination:none;
 text-align:center;
 font-family:Calibri;
-mso-fareast-font-family:ËÎÌå;
+mso-fareast-font-family:å®‹ä½“;
 mso-bidi-font-family:'Times New Roman';
 font-size:9.0000pt;
 mso-font-kerning:1.0000pt;
 }
 
 p.MsoAcetate{
-mso-style-name:Åú×¢¿òÎÄ±¾;
+mso-style-name:æ‰¹æ³¨æ¡†æ–‡æœ¬;
 mso-style-noshow:yes;
 margin:0pt;
 margin-bottom:.0001pt;
@@ -341,14 +341,14 @@ mso-pagination:none;
 text-align:justify;
 text-justify:inter-ideograph;
 font-family:Calibri;
-mso-fareast-font-family:ËÎÌå;
+mso-fareast-font-family:å®‹ä½“;
 mso-bidi-font-family:'Times New Roman';
 font-size:9.0000pt;
 mso-font-kerning:1.0000pt;
 }
 
 p.MsoFooter{
-mso-style-name:Ò³½Å;
+mso-style-name:é¡µè„š;
 mso-style-noshow:yes;
 margin:0pt;
 margin-bottom:.0001pt;
@@ -356,20 +356,20 @@ layout-grid-mode:char;
 mso-pagination:none;
 text-align:left;
 font-family:Calibri;
-mso-fareast-font-family:ËÎÌå;
+mso-fareast-font-family:å®‹ä½“;
 mso-bidi-font-family:'Times New Roman';
 font-size:9.0000pt;
 mso-font-kerning:1.0000pt;
 }
 
 p.p{
-mso-style-name:"ÆÕÍ¨\(ÍøÕ¾\)";
+mso-style-name:"æ™®é€š\(ç½‘ç«™\)";
 mso-margin-top-alt:auto;
 mso-margin-bottom-alt:auto;
 mso-pagination:none;
 text-align:left;
 font-family:Calibri;
-mso-fareast-font-family:ËÎÌå;
+mso-fareast-font-family:å®‹ä½“;
 mso-bidi-font-family:'Times New Roman';
 font-size:12.0000pt;
 }
@@ -390,7 +390,7 @@ color:red;
 }
 
 table.MsoNormalTable{
-mso-style-name:ÆÕÍ¨±í¸ñ;
+mso-style-name:æ™®é€šè¡¨æ ¼;
 mso-style-parent:"";
 mso-style-noshow:yes;
 mso-tstyle-rowband-size:0;
@@ -416,10 +416,10 @@ layout-grid:15.6000pt;
 mso-header-margin:42.5500pt;
 mso-footer-margin:49.6000pt;
 }
-div.Section0{page:Section0;}</style></head><body style="tab-interval:21pt;text-justify-trim:punctuation;" ><!--StartFragment--><div class="Section0"  style="layout-grid:15.6000pt;" ><p class=p  style="text-indent:28.0000pt;mso-char-indent-count:2.0000;" ><span style="mso-spacerun:'yes';font-family:·ÂËÎ_GB2312;mso-hansi-font-family:Calibri;
-mso-bidi-font-family:'Times New Roman';font-size:14.0000pt;mso-font-kerning:0.0000pt;" ><font face="·ÂËÎ_GB2312" >»Æ»´ÈâÑò</font></span><span style="mso-spacerun:'yes';font-family:·ÂËÎ_GB2312;mso-hansi-font-family:ËÎÌå;
-mso-bidi-font-family:'Times New Roman';font-size:14.0000pt;mso-font-kerning:0.0000pt;" ><font face="·ÂËÎ_GB2312" >ÊÇ¶¯Îï¿Æ¼¼Ñ§ÔºÅàÓıµÄ¾ßÓĞ×ÔÖ÷ÖªÊ¶²úÈ¨µÄ¶àÌ¥ÈâÑòĞÂÆ·ÖÖ£¬¸ÃÆ·ÖÖÍ»ÆÆÁËÖĞ¹úÈâÑò²úÒµ·¢Õ¹µÄÖÖÒµ</font>¡°¿¨²±×Ó¡±ÄÑÌâ£¬±»ÊÚÓè¡°2021ÖĞ¹úÅ©ÒµÅ©´åÖØ´óĞÂ¼¼ÊõĞÂ²úÆ·ĞÂ×°±¸¡±¡£»Æ»´ÈâÑò½ÏÏÖÓĞµØ·½Æ·ÖÖÉú²úĞÔÄÜÌá¸ß20%£¬ÔöÊÕ50%£»ÅàÓıÁË4¼ÒÊ¡¼¶ÁúÍ·ÆóÒµºÍ2¸ö¹ú¼ÒÏÖ´úÅ©Òµ²úÒµÔ°£¬´ø¶¯5Íò¶à»§ÈºÖÚ´ÓÊÂÑøÑò²úÒµ£¬ÊµÏÖ²úÖµ53.42ÒÚÔª£¬ÔöĞ§6.43ÒÚÔª£»ÅàÑøÁË100¶àÃûÑ§Éú³ÉÎª×¨ÒµµÄÑøÑò¼¼ÊõºÍ¹ÜÀíÈËÔ±£¬±é²¼È«¹ú¸÷µØÑøÑòÆóÒµ¡£</span><span style="mso-spacerun:'yes';font-family:·ÂËÎ_GB2312;mso-hansi-font-family:ËÎÌå;
-mso-bidi-font-family:'Times New Roman';font-size:14.0000pt;mso-font-kerning:0.0000pt;" ><o:p></o:p></span></p><p class=MsoNormal ><img width="554"  height="738"  src="8.ÈâÑò·¢Õ¹ÖúÁ¦Ïç´åÕñĞË.files/8.ÈâÑò·¢Õ¹ÖúÁ¦Ïç´åÕñĞË207.png" ><img width="554"  height="416"  src="8.ÈâÑò·¢Õ¹ÖúÁ¦Ïç´åÕñĞË.files/8.ÈâÑò·¢Õ¹ÖúÁ¦Ïç´åÕñĞË208.png" ><span style="mso-spacerun:'yes';font-family:·ÂËÎ_GB2312;mso-hansi-font-family:ËÎÌå;
-mso-bidi-font-family:'Times New Roman';font-size:14.0000pt;mso-font-kerning:1.0000pt;" ><o:p>&nbsp;</o:p></span></p><p class=MsoNormal  style="text-indent:28.0000pt;mso-char-indent-count:2.0000;" ><span style="mso-spacerun:'yes';font-family:·ÂËÎ_GB2312;mso-hansi-font-family:ËÎÌå;
-mso-bidi-font-family:'Times New Roman';font-size:14.0000pt;mso-font-kerning:1.0000pt;" ><o:p>&nbsp;</o:p></span></p><p class=MsoNormal ><span style="mso-spacerun:'yes';font-family:Calibri;mso-fareast-font-family:ËÎÌå;
+div.Section0{page:Section0;}</style></head><body style="tab-interval:21pt;text-justify-trim:punctuation;" ><!--StartFragment--><div class="Section0"  style="layout-grid:15.6000pt;" ><p class=p  style="text-indent:28.0000pt;mso-char-indent-count:2.0000;" ><span style="mso-spacerun:'yes';font-family:ä»¿å®‹_GB2312;mso-hansi-font-family:Calibri;
+mso-bidi-font-family:'Times New Roman';font-size:14.0000pt;mso-font-kerning:0.0000pt;" ><font face="ä»¿å®‹_GB2312" >é»„æ·®è‚‰ç¾Š</font></span><span style="mso-spacerun:'yes';font-family:ä»¿å®‹_GB2312;mso-hansi-font-family:å®‹ä½“;
+mso-bidi-font-family:'Times New Roman';font-size:14.0000pt;mso-font-kerning:0.0000pt;" ><font face="ä»¿å®‹_GB2312" >æ˜¯åŠ¨ç‰©ç§‘æŠ€å­¦é™¢åŸ¹è‚²çš„å…·æœ‰è‡ªä¸»çŸ¥è¯†äº§æƒçš„å¤šèƒè‚‰ç¾Šæ–°å“ç§ï¼Œè¯¥å“ç§çªç ´äº†ä¸­å›½è‚‰ç¾Šäº§ä¸šå‘å±•çš„ç§ä¸š</font>â€œå¡è„–å­â€éš¾é¢˜ï¼Œè¢«æˆäºˆâ€œ2021ä¸­å›½å†œä¸šå†œæ‘é‡å¤§æ–°æŠ€æœ¯æ–°äº§å“æ–°è£…å¤‡â€ã€‚é»„æ·®è‚‰ç¾Šè¾ƒç°æœ‰åœ°æ–¹å“ç§ç”Ÿäº§æ€§èƒ½æé«˜20%ï¼Œå¢æ”¶50%ï¼›åŸ¹è‚²äº†4å®¶çœçº§é¾™å¤´ä¼ä¸šå’Œ2ä¸ªå›½å®¶ç°ä»£å†œä¸šäº§ä¸šå›­ï¼Œå¸¦åŠ¨5ä¸‡å¤šæˆ·ç¾¤ä¼—ä»äº‹å…»ç¾Šäº§ä¸šï¼Œå®ç°äº§å€¼53.42äº¿å…ƒï¼Œå¢æ•ˆ6.43äº¿å…ƒï¼›åŸ¹å…»äº†100å¤šåå­¦ç”Ÿæˆä¸ºä¸“ä¸šçš„å…»ç¾ŠæŠ€æœ¯å’Œç®¡ç†äººå‘˜ï¼Œéå¸ƒå…¨å›½å„åœ°å…»ç¾Šä¼ä¸šã€‚</span><span style="mso-spacerun:'yes';font-family:ä»¿å®‹_GB2312;mso-hansi-font-family:å®‹ä½“;
+mso-bidi-font-family:'Times New Roman';font-size:14.0000pt;mso-font-kerning:0.0000pt;" ><o:p></o:p></span></p><p class=MsoNormal ><img width="554"  height="738"  src="8.è‚‰ç¾Šå‘å±•åŠ©åŠ›ä¹¡æ‘æŒ¯å…´.files/8.è‚‰ç¾Šå‘å±•åŠ©åŠ›ä¹¡æ‘æŒ¯å…´207.png" ><img width="554"  height="416"  src="8.è‚‰ç¾Šå‘å±•åŠ©åŠ›ä¹¡æ‘æŒ¯å…´.files/8.è‚‰ç¾Šå‘å±•åŠ©åŠ›ä¹¡æ‘æŒ¯å…´208.png" ><span style="mso-spacerun:'yes';font-family:ä»¿å®‹_GB2312;mso-hansi-font-family:å®‹ä½“;
+mso-bidi-font-family:'Times New Roman';font-size:14.0000pt;mso-font-kerning:1.0000pt;" ><o:p>&nbsp;</o:p></span></p><p class=MsoNormal  style="text-indent:28.0000pt;mso-char-indent-count:2.0000;" ><span style="mso-spacerun:'yes';font-family:ä»¿å®‹_GB2312;mso-hansi-font-family:å®‹ä½“;
+mso-bidi-font-family:'Times New Roman';font-size:14.0000pt;mso-font-kerning:1.0000pt;" ><o:p>&nbsp;</o:p></span></p><p class=MsoNormal ><span style="mso-spacerun:'yes';font-family:Calibri;mso-fareast-font-family:å®‹ä½“;
 mso-bidi-font-family:'Times New Roman';font-size:10.5000pt;mso-font-kerning:1.0000pt;" ><o:p>&nbsp;</o:p></span></p></div><!--EndFragment--></body></html>
