--- a/formatPages/11.英才图书馆阅读区扩容.html
+++ b/formatPages/11.英才图书馆阅读区扩容.html
@@ -1,5 +1,5 @@
 
-<html xmlns:o="urn:schemas-microsoft-com:office:office" xmlns:w="urn:schemas-microsoft-com:office:word" xmlns:dt="uuid:C2F41010-65B3-11d1-A29F-00AA00C14882" xmlns="http://www.w3.org/TR/REC-html40"><head><meta http-equiv=Content-Type  content="text/html; charset=gb2312" ><meta name=ProgId  content=Word.Document ><meta name=Generator  content="Microsoft Word 14" ><meta name=Originator  content="Microsoft Word 14" ><title></title><!--[if gte mso 9]><xml><o:DocumentProperties><o:Author>DE106</o:Author><o:LastAuthor>Ö½É¡ÏÂµÄÑÌÓê</o:LastAuthor><o:Revision>1</o:Revision><o:Pages>1</o:Pages><o:Characters>385</o:Characters><o:Lines>1</o:Lines><o:Paragraphs>5</o:Paragraphs></o:DocumentProperties><o:CustomDocumentProperties><o:ICV dt:dt="string" >B1C25325E6E443AB808BA2E7E6654C49</o:ICV><o:KSOProductBuildVer dt:dt="string" >2052-11.1.0.11194</o:KSOProductBuildVer></o:CustomDocumentProperties></xml><![endif]--><!--[if gte mso 9]><xml><o:OfficeDocumentSettings></o:OfficeDocumentSettings></xml><![endif]--><!--[if gte mso 9]><xml><w:WordDocument><w:BrowserLevel>MicrosoftInternetExplorer4</w:BrowserLevel><w:DisplayHorizontalDrawingGridEvery>0</w:DisplayHorizontalDrawingGridEvery><w:DisplayVerticalDrawingGridEvery>2</w:DisplayVerticalDrawingGridEvery><w:DocumentKind>DocumentNotSpecified</w:DocumentKind><w:DrawingGridVerticalSpacing>7.8 °õ</w:DrawingGridVerticalSpacing><w:PunctuationKerning></w:PunctuationKerning><w:View>Web</w:View><w:Compatibility><w:AdjustLineHeightInTable/><w:DontGrowAutofit/><w:BalanceSingleByteDoubleByteWidth/><w:DoNotExpandShiftReturn/><w:UseFELayout/></w:Compatibility><w:Zoom>0</w:Zoom></w:WordDocument></xml><![endif]--><!--[if gte mso 9]><xml><w:LatentStyles DefLockedState="false"  DefUnhideWhenUsed="true"  DefSemiHidden="true"  DefQFormat="false"  DefPriority="99"  LatentStyleCount="260" >
+<html xmlns:o="urn:schemas-microsoft-com:office:office" xmlns:w="urn:schemas-microsoft-com:office:word" xmlns:dt="uuid:C2F41010-65B3-11d1-A29F-00AA00C14882" xmlns="http://www.w3.org/TR/REC-html40"><head><meta http-equiv=Content-Type  content="text/html; charset=utf8" ><meta name=ProgId  content=Word.Document ><meta name=Generator  content="Microsoft Word 14" ><meta name=Originator  content="Microsoft Word 14" ><title></title><!--[if gte mso 9]><xml><o:DocumentProperties><o:Author>DE106</o:Author><o:LastAuthor>çº¸ä¼žä¸‹çš„çƒŸé›¨</o:LastAuthor><o:Revision>1</o:Revision><o:Pages>1</o:Pages><o:Characters>385</o:Characters><o:Lines>1</o:Lines><o:Paragraphs>5</o:Paragraphs></o:DocumentProperties><o:CustomDocumentProperties><o:ICV dt:dt="string" >B1C25325E6E443AB808BA2E7E6654C49</o:ICV><o:KSOProductBuildVer dt:dt="string" >2052-11.1.0.11194</o:KSOProductBuildVer></o:CustomDocumentProperties></xml><![endif]--><!--[if gte mso 9]><xml><o:OfficeDocumentSettings></o:OfficeDocumentSettings></xml><![endif]--><!--[if gte mso 9]><xml><w:WordDocument><w:BrowserLevel>MicrosoftInternetExplorer4</w:BrowserLevel><w:DisplayHorizontalDrawingGridEvery>0</w:DisplayHorizontalDrawingGridEvery><w:DisplayVerticalDrawingGridEvery>2</w:DisplayVerticalDrawingGridEvery><w:DocumentKind>DocumentNotSpecified</w:DocumentKind><w:DrawingGridVerticalSpacing>7.8 ç£…</w:DrawingGridVerticalSpacing><w:PunctuationKerning></w:PunctuationKerning><w:View>Web</w:View><w:Compatibility><w:AdjustLineHeightInTable/><w:DontGrowAutofit/><w:BalanceSingleByteDoubleByteWidth/><w:DoNotExpandShiftReturn/><w:UseFELayout/></w:Compatibility><w:Zoom>0</w:Zoom></w:WordDocument></xml><![endif]--><!--[if gte mso 9]><xml><w:LatentStyles DefLockedState="false"  DefUnhideWhenUsed="true"  DefSemiHidden="true"  DefQFormat="false"  DefPriority="99"  LatentStyleCount="260" >
     <w:LsdException Locked="false"  Priority="0"  SemiHidden="false"  UnhideWhenUsed="false"  QFormat="true"  Name="Normal" ></w:LsdException>
 <w:LsdException Locked="false"  Priority="0"  SemiHidden="false"  UnhideWhenUsed="false"  QFormat="true"  Name="heading 1" ></w:LsdException>
 <w:LsdException Locked="false"  Priority="0"  SemiHidden="false"  QFormat="true"  Name="heading 2" ></w:LsdException>
@@ -263,7 +263,7 @@ font-family:"Times New Roman";
 }
 
 @font-face{
-font-family:"ËÎÌå";
+font-family:"å®‹ä½“";
 }
 
 @font-face{
@@ -279,7 +279,7 @@ font-family:"Wingdings";
 }
 
 p.MsoNormal{
-mso-style-name:ÕýÎÄ;
+mso-style-name:æ­£æ–‡;
 mso-style-parent:"";
 margin:0pt;
 margin-bottom:.0001pt;
@@ -287,7 +287,7 @@ mso-pagination:none;
 text-align:justify;
 text-justify:inter-ideograph;
 font-family:Calibri;
-mso-fareast-font-family:ËÎÌå;
+mso-fareast-font-family:å®‹ä½“;
 mso-bidi-font-family:Arial;
 font-size:10.5000pt;
 mso-font-kerning:1.0000pt;
@@ -313,7 +313,7 @@ color:red;
 }
 
 table.MsoNormalTable{
-mso-style-name:ÆÕÍ¨±í¸ñ;
+mso-style-name:æ™®é€šè¡¨æ ¼;
 mso-style-parent:"";
 mso-style-noshow:yes;
 mso-tstyle-rowband-size:0;
@@ -339,16 +339,16 @@ layout-grid:15.6000pt;
 mso-header-margin:42.5500pt;
 mso-footer-margin:49.6000pt;
 }
-div.Section0{page:Section0;}</style></head><body style="tab-interval:21pt;text-justify-trim:punctuation;" ><!--StartFragment--><div class="Section0"  style="layout-grid:15.6000pt;" ><p class=MsoNormal  align=center  style="text-align:center;line-height:24.0000pt;mso-line-height-rule:exactly;" ><b><span style="mso-spacerun:'yes';font-family:Calibri;mso-fareast-font-family:ËÎÌå;
+div.Section0{page:Section0;}</style></head><body style="tab-interval:21pt;text-justify-trim:punctuation;" ><!--StartFragment--><div class="Section0"  style="layout-grid:15.6000pt;" ><p class=MsoNormal  align=center  style="text-align:center;line-height:24.0000pt;mso-line-height-rule:exactly;" ><b><span style="mso-spacerun:'yes';font-family:Calibri;mso-fareast-font-family:å®‹ä½“;
 mso-bidi-font-family:Arial;font-weight:bold;font-size:22.0000pt;
-mso-font-kerning:1.0000pt;" ><font face="ËÎÌå" >Ó¢²ÅÍ¼Êé¹ÝÔÄ¶ÁÇøÀ©ÈÝ</font></span></b><b><span style="mso-spacerun:'yes';font-family:Calibri;mso-fareast-font-family:ËÎÌå;
+mso-font-kerning:1.0000pt;" ><font face="å®‹ä½“" >è‹±æ‰å›¾ä¹¦é¦†é˜…è¯»åŒºæ‰©å®¹</font></span></b><b><span style="mso-spacerun:'yes';font-family:Calibri;mso-fareast-font-family:å®‹ä½“;
 mso-bidi-font-family:Arial;font-weight:bold;font-size:22.0000pt;
-mso-font-kerning:1.0000pt;" ><o:p></o:p></span></b></p><p class=MsoNormal  style="mso-char-indent-count:2.0000;line-height:24.0000pt;mso-line-height-rule:exactly;" ><span style="mso-spacerun:'yes';font-family:Calibri;mso-fareast-font-family:ËÎÌå;
-mso-bidi-font-family:Arial;font-size:14.0000pt;mso-font-kerning:1.0000pt;" ><o:p>&nbsp;</o:p></span></p><p class=MsoNormal  style="mso-char-indent-count:2.0000;line-height:24.0000pt;mso-line-height-rule:exactly;" ><span style="mso-spacerun:'yes';font-family:Calibri;mso-fareast-font-family:ËÎÌå;
-mso-bidi-font-family:Arial;font-size:14.0000pt;mso-font-kerning:1.0000pt;" ><font face="ËÎÌå" >ÎªÁË»º½âÓ¢²ÅÐ£Çø¿¼ÑÐÍ¬Ñ§Ñ§Ï°³¡Ëù²»×ã£¬ÎªÍ¬Ñ§ÃÇÓªÔìÁ¼ºÃµÄÑ§Ï°»·¾³£¬Ó¢²ÅÐ£ÇøÍ¼Êé¹ÝÕûºÏ¹ÝÄÚ×ÊÔ´£¬ÓÅ»¯¿Õ¼ä²¼¾Ö£¬ÔÚÑ§Ð£Áìµ¼¹ØÐÄºÍÏà¹Ø²¿ÃÅ´óÁ¦ÅäºÏÏÂ£¬¹ºÖÃÁË</font><font face="Calibri" >130</font><font face="ËÎÌå" >ÕÅÁùÈËÔÄÀÀ×ÀºÍ</font><font face="Calibri" >820</font><font face="ËÎÌå" >°ÑÒÎ×Ó£¬Ê¹¹ÝÄÚÔÄÀÀ×ùÎ»´Ó</font><font face="Calibri" >1600</font><font face="ËÎÌå" >Óà¸ö£¬Ôö¼Óµ½</font><font face="Calibri" >2400</font><font face="ËÎÌå" >Óà¸ö£¬Ôö¼ÓÁË</font><font face="Calibri" >50%</font><font face="ËÎÌå" >£¬»ù±¾±£Ö¤ÁË¿¼ÑÐ¸´Ï°Í¬Ñ§ÈËÈËÓÐ×ùÎ»¡£</font></span><span style="mso-spacerun:'yes';font-family:Calibri;mso-fareast-font-family:ËÎÌå;
-mso-bidi-font-family:Arial;font-size:14.0000pt;mso-font-kerning:1.0000pt;" ><o:p></o:p></span></p><p class=MsoNormal  style="mso-char-indent-count:2.0000;line-height:24.0000pt;mso-line-height-rule:exactly;" ><span style="mso-spacerun:'yes';font-family:Calibri;mso-fareast-font-family:ËÎÌå;
-mso-bidi-font-family:Arial;font-size:14.0000pt;mso-font-kerning:1.0000pt;" ><font face="ËÎÌå" >ÁíÍâ£¬»¹¶Ô</font><font face="Calibri" >180</font><font face="ËÎÌå" >¸ö¿¨×ùÊ½µÄÑ§Ï°Î»¼Ó×°ÁË³äµç²å×ù£¬·½±ãÑ§ÉúÊ¹ÓÃ±Ê¼Ç±¾µçÄÔºÍ</font><font face="Calibri" >ipad</font><font face="ËÎÌå" >µÈÉè±¸£»¸ü»»ÔÄ¶ÁÇøÓòÕÕÃ÷µÆ¾ß£¬ÓÐÐ§±£»¤ÑÛ¾¦£»Í¼Êé¹Ý½ÌÊ¦×Ô¼º¶¯ÊÖÐÞ¸´ÆÆËð´¢Îï¹ñ£¬·½±ãÑ§Éú´¢´æÎïÆ·£»Îª½èÔÄÇø¼Ó×°¿Õµ÷£¬»º½âÑ§ÉúÔÚ°ìÀí½èÔÄÍ¼ÊéÊÖÐøÊ±µÄ¶¬ÀäÏÄÈÈÎÊÌâ£»¿ª·ÅÊ±¼ä´ÓÔ­À´µÄ</font><font face="Calibri" >8:00-21:40</font><font face="ËÎÌå" >£¬µ÷ÕûÎª</font><font face="Calibri" >6:30-21:40</font><font face="ËÎÌå" >£¬¸üºÃ·þÎñ¿¼ÑÐºÍ×¨Éý±¾Ñ§Éú¸´Ï°±¸¿¼¡£</font></span><span style="mso-spacerun:'yes';font-family:Calibri;mso-fareast-font-family:ËÎÌå;
-mso-bidi-font-family:Arial;font-size:14.0000pt;mso-font-kerning:1.0000pt;" ><o:p></o:p></span></p><p class=MsoNormal  style="mso-char-indent-count:2.0000;line-height:24.0000pt;mso-line-height-rule:exactly;" ><span style="mso-spacerun:'yes';font-family:Calibri;mso-fareast-font-family:ËÎÌå;
-mso-bidi-font-family:Arial;font-size:14.0000pt;mso-font-kerning:1.0000pt;" ><font face="ËÎÌå" >Í¼Êé¹Ý½«½øÒ»²½ÌáÉýÓýÈË»·¾³£¬Ìá¸ß·þÎñÖÊÁ¿£¬ÔöÇ¿ÎªÊ¦Éú°ìÊµÊÂµÄÄÜÁ¦£¬Ê¹Í¼Êé¹Ý¸÷Ïî¹¤×÷ÔÙÉÏÐÂÌ¨½×£¬³ÖÐø·¢»ÓºÃ·þÎñÓýÈË¡¢»·¾³ÓýÈËµÄ×÷ÓÃ¡£</font></span><span><table cellpadding="0"  cellspacing="0" ><tr><td width="0"  height="0" ></td></tr><tr><td></td><td><img width="554"  height="312"  src="11.Ó¢²ÅÍ¼Êé¹ÝÔÄ¶ÁÇøÀ©ÈÝ.files/11.Ó¢²ÅÍ¼Êé¹ÝÔÄ¶ÁÇøÀ©ÈÝ389.png" ></td></tr></table></span><span style="mso-spacerun:'yes';font-family:ËÎÌå;mso-ascii-font-family:Calibri;
+mso-font-kerning:1.0000pt;" ><o:p></o:p></span></b></p><p class=MsoNormal  style="mso-char-indent-count:2.0000;line-height:24.0000pt;mso-line-height-rule:exactly;" ><span style="mso-spacerun:'yes';font-family:Calibri;mso-fareast-font-family:å®‹ä½“;
+mso-bidi-font-family:Arial;font-size:14.0000pt;mso-font-kerning:1.0000pt;" ><o:p>&nbsp;</o:p></span></p><p class=MsoNormal  style="mso-char-indent-count:2.0000;line-height:24.0000pt;mso-line-height-rule:exactly;" ><span style="mso-spacerun:'yes';font-family:Calibri;mso-fareast-font-family:å®‹ä½“;
+mso-bidi-font-family:Arial;font-size:14.0000pt;mso-font-kerning:1.0000pt;" ><font face="å®‹ä½“" >ä¸ºäº†ç¼“è§£è‹±æ‰æ ¡åŒºè€ƒç ”åŒå­¦å­¦ä¹ åœºæ‰€ä¸è¶³ï¼Œä¸ºåŒå­¦ä»¬è¥é€ è‰¯å¥½çš„å­¦ä¹ çŽ¯å¢ƒï¼Œè‹±æ‰æ ¡åŒºå›¾ä¹¦é¦†æ•´åˆé¦†å†…èµ„æºï¼Œä¼˜åŒ–ç©ºé—´å¸ƒå±€ï¼Œåœ¨å­¦æ ¡é¢†å¯¼å…³å¿ƒå’Œç›¸å…³éƒ¨é—¨å¤§åŠ›é…åˆä¸‹ï¼Œè´­ç½®äº†</font><font face="Calibri" >130</font><font face="å®‹ä½“" >å¼ å…­äººé˜…è§ˆæ¡Œå’Œ</font><font face="Calibri" >820</font><font face="å®‹ä½“" >æŠŠæ¤…å­ï¼Œä½¿é¦†å†…é˜…è§ˆåº§ä½ä»Ž</font><font face="Calibri" >1600</font><font face="å®‹ä½“" >ä½™ä¸ªï¼Œå¢žåŠ åˆ°</font><font face="Calibri" >2400</font><font face="å®‹ä½“" >ä½™ä¸ªï¼Œå¢žåŠ äº†</font><font face="Calibri" >50%</font><font face="å®‹ä½“" >ï¼ŒåŸºæœ¬ä¿è¯äº†è€ƒç ”å¤ä¹ åŒå­¦äººäººæœ‰åº§ä½ã€‚</font></span><span style="mso-spacerun:'yes';font-family:Calibri;mso-fareast-font-family:å®‹ä½“;
+mso-bidi-font-family:Arial;font-size:14.0000pt;mso-font-kerning:1.0000pt;" ><o:p></o:p></span></p><p class=MsoNormal  style="mso-char-indent-count:2.0000;line-height:24.0000pt;mso-line-height-rule:exactly;" ><span style="mso-spacerun:'yes';font-family:Calibri;mso-fareast-font-family:å®‹ä½“;
+mso-bidi-font-family:Arial;font-size:14.0000pt;mso-font-kerning:1.0000pt;" ><font face="å®‹ä½“" >å¦å¤–ï¼Œè¿˜å¯¹</font><font face="Calibri" >180</font><font face="å®‹ä½“" >ä¸ªå¡åº§å¼çš„å­¦ä¹ ä½åŠ è£…äº†å……ç”µæ’åº§ï¼Œæ–¹ä¾¿å­¦ç”Ÿä½¿ç”¨ç¬”è®°æœ¬ç”µè„‘å’Œ</font><font face="Calibri" >ipad</font><font face="å®‹ä½“" >ç­‰è®¾å¤‡ï¼›æ›´æ¢é˜…è¯»åŒºåŸŸç…§æ˜Žç¯å…·ï¼Œæœ‰æ•ˆä¿æŠ¤çœ¼ç›ï¼›å›¾ä¹¦é¦†æ•™å¸ˆè‡ªå·±åŠ¨æ‰‹ä¿®å¤ç ´æŸå‚¨ç‰©æŸœï¼Œæ–¹ä¾¿å­¦ç”Ÿå‚¨å­˜ç‰©å“ï¼›ä¸ºå€Ÿé˜…åŒºåŠ è£…ç©ºè°ƒï¼Œç¼“è§£å­¦ç”Ÿåœ¨åŠžç†å€Ÿé˜…å›¾ä¹¦æ‰‹ç»­æ—¶çš„å†¬å†·å¤çƒ­é—®é¢˜ï¼›å¼€æ”¾æ—¶é—´ä»ŽåŽŸæ¥çš„</font><font face="Calibri" >8:00-21:40</font><font face="å®‹ä½“" >ï¼Œè°ƒæ•´ä¸º</font><font face="Calibri" >6:30-21:40</font><font face="å®‹ä½“" >ï¼Œæ›´å¥½æœåŠ¡è€ƒç ”å’Œä¸“å‡æœ¬å­¦ç”Ÿå¤ä¹ å¤‡è€ƒã€‚</font></span><span style="mso-spacerun:'yes';font-family:Calibri;mso-fareast-font-family:å®‹ä½“;
+mso-bidi-font-family:Arial;font-size:14.0000pt;mso-font-kerning:1.0000pt;" ><o:p></o:p></span></p><p class=MsoNormal  style="mso-char-indent-count:2.0000;line-height:24.0000pt;mso-line-height-rule:exactly;" ><span style="mso-spacerun:'yes';font-family:Calibri;mso-fareast-font-family:å®‹ä½“;
+mso-bidi-font-family:Arial;font-size:14.0000pt;mso-font-kerning:1.0000pt;" ><font face="å®‹ä½“" >å›¾ä¹¦é¦†å°†è¿›ä¸€æ­¥æå‡è‚²äººçŽ¯å¢ƒï¼Œæé«˜æœåŠ¡è´¨é‡ï¼Œå¢žå¼ºä¸ºå¸ˆç”ŸåŠžå®žäº‹çš„èƒ½åŠ›ï¼Œä½¿å›¾ä¹¦é¦†å„é¡¹å·¥ä½œå†ä¸Šæ–°å°é˜¶ï¼ŒæŒç»­å‘æŒ¥å¥½æœåŠ¡è‚²äººã€çŽ¯å¢ƒè‚²äººçš„ä½œç”¨ã€‚</font></span><span><table cellpadding="0"  cellspacing="0" ><tr><td width="0"  height="0" ></td></tr><tr><td></td><td><img width="554"  height="312"  src="11.è‹±æ‰å›¾ä¹¦é¦†é˜…è¯»åŒºæ‰©å®¹.files/11.è‹±æ‰å›¾ä¹¦é¦†é˜…è¯»åŒºæ‰©å®¹389.png" ></td></tr></table></span><span style="mso-spacerun:'yes';font-family:å®‹ä½“;mso-ascii-font-family:Calibri;
 mso-hansi-font-family:Calibri;mso-bidi-font-family:Arial;font-size:14.0000pt;
 mso-font-kerning:1.0000pt;" ><o:p></o:p></span></p></div><!--EndFragment--></body></html>
