--- a/formatPages/14.龙子湖校区体育看台建设.html
+++ b/formatPages/14.龙子湖校区体育看台建设.html
@@ -1,5 +1,5 @@
 
-<html xmlns:o="urn:schemas-microsoft-com:office:office" xmlns:w="urn:schemas-microsoft-com:office:word" xmlns:dt="uuid:C2F41010-65B3-11d1-A29F-00AA00C14882" xmlns="http://www.w3.org/TR/REC-html40"><head><meta http-equiv=Content-Type  content="text/html; charset=gb2312" ><meta name=ProgId  content=Word.Document ><meta name=Generator  content="Microsoft Word 14" ><meta name=Originator  content="Microsoft Word 14" ><title></title><!--[if gte mso 9]><xml><o:DocumentProperties><o:Author>admin</o:Author><o:LastAuthor>Ö½É¡ÏÂµÄÑÌÓê</o:LastAuthor><o:Revision>1</o:Revision><o:Pages>1</o:Pages></o:DocumentProperties><o:CustomDocumentProperties><o:KSOProductBuildVer dt:dt="string" >2052-11.1.0.11194</o:KSOProductBuildVer><o:ICV dt:dt="string" >94C8F00C7CD74CC28448C01CC7484D41</o:ICV></o:CustomDocumentProperties></xml><![endif]--><!--[if gte mso 9]><xml><o:OfficeDocumentSettings></o:OfficeDocumentSettings></xml><![endif]--><!--[if gte mso 9]><xml><w:WordDocument><w:BrowserLevel>MicrosoftInternetExplorer4</w:BrowserLevel><w:DisplayHorizontalDrawingGridEvery>0</w:DisplayHorizontalDrawingGridEvery><w:DisplayVerticalDrawingGridEvery>2</w:DisplayVerticalDrawingGridEvery><w:DocumentKind>DocumentNotSpecified</w:DocumentKind><w:DrawingGridVerticalSpacing>7.8 °õ</w:DrawingGridVerticalSpacing><w:PunctuationKerning></w:PunctuationKerning><w:View>Web</w:View><w:Compatibility><w:AdjustLineHeightInTable/><w:DontGrowAutofit/><w:BalanceSingleByteDoubleByteWidth/><w:DoNotExpandShiftReturn/><w:UseFELayout/></w:Compatibility><w:Zoom>0</w:Zoom></w:WordDocument></xml><![endif]--><!--[if gte mso 9]><xml><w:LatentStyles DefLockedState="false"  DefUnhideWhenUsed="true"  DefSemiHidden="true"  DefQFormat="false"  DefPriority="99"  LatentStyleCount="260" >
+<html xmlns:o="urn:schemas-microsoft-com:office:office" xmlns:w="urn:schemas-microsoft-com:office:word" xmlns:dt="uuid:C2F41010-65B3-11d1-A29F-00AA00C14882" xmlns="http://www.w3.org/TR/REC-html40"><head><meta http-equiv=Content-Type  content="text/html; charset=utf8" ><meta name=ProgId  content=Word.Document ><meta name=Generator  content="Microsoft Word 14" ><meta name=Originator  content="Microsoft Word 14" ><title></title><!--[if gte mso 9]><xml><o:DocumentProperties><o:Author>admin</o:Author><o:LastAuthor>çº¸ä¼ä¸‹çš„çƒŸé›¨</o:LastAuthor><o:Revision>1</o:Revision><o:Pages>1</o:Pages></o:DocumentProperties><o:CustomDocumentProperties><o:KSOProductBuildVer dt:dt="string" >2052-11.1.0.11194</o:KSOProductBuildVer><o:ICV dt:dt="string" >94C8F00C7CD74CC28448C01CC7484D41</o:ICV></o:CustomDocumentProperties></xml><![endif]--><!--[if gte mso 9]><xml><o:OfficeDocumentSettings></o:OfficeDocumentSettings></xml><![endif]--><!--[if gte mso 9]><xml><w:WordDocument><w:BrowserLevel>MicrosoftInternetExplorer4</w:BrowserLevel><w:DisplayHorizontalDrawingGridEvery>0</w:DisplayHorizontalDrawingGridEvery><w:DisplayVerticalDrawingGridEvery>2</w:DisplayVerticalDrawingGridEvery><w:DocumentKind>DocumentNotSpecified</w:DocumentKind><w:DrawingGridVerticalSpacing>7.8 ç£…</w:DrawingGridVerticalSpacing><w:PunctuationKerning></w:PunctuationKerning><w:View>Web</w:View><w:Compatibility><w:AdjustLineHeightInTable/><w:DontGrowAutofit/><w:BalanceSingleByteDoubleByteWidth/><w:DoNotExpandShiftReturn/><w:UseFELayout/></w:Compatibility><w:Zoom>0</w:Zoom></w:WordDocument></xml><![endif]--><!--[if gte mso 9]><xml><w:LatentStyles DefLockedState="false"  DefUnhideWhenUsed="true"  DefSemiHidden="true"  DefQFormat="false"  DefPriority="99"  LatentStyleCount="260" >
     <w:LsdException Locked="false"  Priority="0"  SemiHidden="false"  UnhideWhenUsed="false"  QFormat="true"  Name="Normal" ></w:LsdException>
 <w:LsdException Locked="false"  Priority="0"  SemiHidden="false"  UnhideWhenUsed="false"  QFormat="true"  Name="heading 1" ></w:LsdException>
 <w:LsdException Locked="false"  Priority="0"  SemiHidden="false"  QFormat="true"  Name="heading 2" ></w:LsdException>
@@ -263,7 +263,7 @@ font-family:"Times New Roman";
 }
 
 @font-face{
-font-family:"ËÎÌå";
+font-family:"å®‹ä½“";
 }
 
 @font-face{
@@ -275,7 +275,7 @@ font-family:"Wingdings";
 }
 
 p.MsoNormal{
-mso-style-name:ÕıÎÄ;
+mso-style-name:æ­£æ–‡;
 mso-style-parent:"";
 margin:0pt;
 margin-bottom:.0001pt;
@@ -283,7 +283,7 @@ mso-pagination:none;
 text-align:justify;
 text-justify:inter-ideograph;
 font-family:Calibri;
-mso-fareast-font-family:ËÎÌå;
+mso-fareast-font-family:å®‹ä½“;
 mso-bidi-font-family:'Times New Roman';
 font-size:10.5000pt;
 mso-font-kerning:1.0000pt;
@@ -309,7 +309,7 @@ color:red;
 }
 
 table.MsoNormalTable{
-mso-style-name:ÆÕÍ¨±í¸ñ;
+mso-style-name:æ™®é€šè¡¨æ ¼;
 mso-style-parent:"";
 mso-style-noshow:yes;
 mso-tstyle-rowband-size:0;
@@ -335,10 +335,10 @@ layout-grid:15.6000pt;
 mso-header-margin:42.5500pt;
 mso-footer-margin:49.6000pt;
 }
-div.Section0{page:Section0;}</style></head><body style="tab-interval:21pt;text-justify-trim:punctuation;" ><!--StartFragment--><div class="Section0"  style="layout-grid:15.6000pt;" ><p class=MsoNormal ><span style="mso-spacerun:'yes';font-family:ËÎÌå;mso-ascii-font-family:Calibri;
+div.Section0{page:Section0;}</style></head><body style="tab-interval:21pt;text-justify-trim:punctuation;" ><!--StartFragment--><div class="Section0"  style="layout-grid:15.6000pt;" ><p class=MsoNormal ><span style="mso-spacerun:'yes';font-family:å®‹ä½“;mso-ascii-font-family:Calibri;
 mso-hansi-font-family:Calibri;mso-bidi-font-family:'Times New Roman';font-size:10.5000pt;
-mso-font-kerning:1.0000pt;" ><font face="ËÎÌå" >Áú×ÓºşĞ£ÇøÌåÓı¿´Ì¨ÊÇÊ¡²ÆÕş×Ê½ğ×¨Ïî×ÊÖúÏîÄ¿£¬Ò²ÊÇÑ§Ğ£</font>¡°ÎªÃñ°ìÊµÊÂ¡±ÖØµãÏîÄ¿Ö®Ò»¡£ÏîÄ¿¾­¹ı¿ÆÑ§ºÏÀíÂÛÖ¤£¬ÓÚ<font face="Calibri" >2020</font><font face="ËÎÌå" >ÄêÁ¢ÏîÕĞ±ê£¬¹¤ÆÚ</font><font face="Calibri" >120</font><font face="ËÎÌå" >Ìì£¬Ôì¼Û</font><font face="Calibri" >578.64</font><font face="ËÎÌå" >ÍòÔª£¬½¨ÖşÃæ»ı</font><font face="Calibri" >1448</font><font face="ËÎÌå" >Æ½·½Ã×£¬</font><font face="Calibri" >2021</font><font face="ËÎÌå" >Äê</font><font face="Calibri" >4</font><font face="ËÎÌå" >ÔÂ¿¢¹¤¡£¸Ö½á¹¹¿ò¼Ü£¬ÕÅÀ­Ä¤¶¥Åï£¬ÊÇÁú×ÓºşĞ£ÇøÊ×¸öÌåÓı³¡¹İÀàÏîÄ¿£¬¿ÉÈİÄÉ½üÇ§ÃûÊ¦Éú¹Û¿´ÌåÓı±ÈÈü¡£</font></span><span style="mso-spacerun:'yes';font-family:ËÎÌå;mso-ascii-font-family:Calibri;
+mso-font-kerning:1.0000pt;" ><font face="å®‹ä½“" >é¾™å­æ¹–æ ¡åŒºä½“è‚²çœ‹å°æ˜¯çœè´¢æ”¿èµ„é‡‘ä¸“é¡¹èµ„åŠ©é¡¹ç›®ï¼Œä¹Ÿæ˜¯å­¦æ ¡</font>â€œä¸ºæ°‘åŠå®äº‹â€é‡ç‚¹é¡¹ç›®ä¹‹ä¸€ã€‚é¡¹ç›®ç»è¿‡ç§‘å­¦åˆç†è®ºè¯ï¼Œäº<font face="Calibri" >2020</font><font face="å®‹ä½“" >å¹´ç«‹é¡¹æ‹›æ ‡ï¼Œå·¥æœŸ</font><font face="Calibri" >120</font><font face="å®‹ä½“" >å¤©ï¼Œé€ ä»·</font><font face="Calibri" >578.64</font><font face="å®‹ä½“" >ä¸‡å…ƒï¼Œå»ºç­‘é¢ç§¯</font><font face="Calibri" >1448</font><font face="å®‹ä½“" >å¹³æ–¹ç±³ï¼Œ</font><font face="Calibri" >2021</font><font face="å®‹ä½“" >å¹´</font><font face="Calibri" >4</font><font face="å®‹ä½“" >æœˆç«£å·¥ã€‚é’¢ç»“æ„æ¡†æ¶ï¼Œå¼ æ‹‰è†œé¡¶æ£šï¼Œæ˜¯é¾™å­æ¹–æ ¡åŒºé¦–ä¸ªä½“è‚²åœºé¦†ç±»é¡¹ç›®ï¼Œå¯å®¹çº³è¿‘åƒåå¸ˆç”Ÿè§‚çœ‹ä½“è‚²æ¯”èµ›ã€‚</font></span><span style="mso-spacerun:'yes';font-family:å®‹ä½“;mso-ascii-font-family:Calibri;
 mso-hansi-font-family:Calibri;mso-bidi-font-family:'Times New Roman';font-size:10.5000pt;
-mso-font-kerning:1.0000pt;" ><o:p></o:p></span></p><p class=MsoNormal ><img width="553"  height="415"  src="14.Áú×ÓºşĞ£ÇøÌåÓı¿´Ì¨½¨Éè.files/14.Áú×ÓºşĞ£ÇøÌåÓı¿´Ì¨½¨Éè146.png" ><span style="mso-spacerun:'yes';font-family:ËÎÌå;mso-ascii-font-family:Calibri;
+mso-font-kerning:1.0000pt;" ><o:p></o:p></span></p><p class=MsoNormal ><img width="553"  height="415"  src="14.é¾™å­æ¹–æ ¡åŒºä½“è‚²çœ‹å°å»ºè®¾.files/14.é¾™å­æ¹–æ ¡åŒºä½“è‚²çœ‹å°å»ºè®¾146.png" ><span style="mso-spacerun:'yes';font-family:å®‹ä½“;mso-ascii-font-family:Calibri;
 mso-hansi-font-family:Calibri;mso-bidi-font-family:'Times New Roman';font-size:10.5000pt;
 mso-font-kerning:1.0000pt;" ><o:p>&nbsp;</o:p></span></p></div><!--EndFragment--></body></html>
