--- a/formatPages/17.理学部专升本义务辅导.html
+++ b/formatPages/17.理学部专升本义务辅导.html
@@ -1,5 +1,5 @@
 
-<html xmlns:o="urn:schemas-microsoft-com:office:office" xmlns:w="urn:schemas-microsoft-com:office:word" xmlns:dt="uuid:C2F41010-65B3-11d1-A29F-00AA00C14882" xmlns="http://www.w3.org/TR/REC-html40"><head><meta http-equiv=Content-Type  content="text/html; charset=gb2312" ><meta name=ProgId  content=Word.Document ><meta name=Generator  content="Microsoft Word 14" ><meta name=Originator  content="Microsoft Word 14" ><title></title><!--[if gte mso 9]><xml><o:DocumentProperties><o:Author>USER</o:Author><o:LastAuthor>Ö½É¡ÏÂµÄÑÌÓê</o:LastAuthor><o:Revision>1</o:Revision><o:Pages>1</o:Pages><o:Characters>192</o:Characters><o:Lines>1</o:Lines><o:Paragraphs>1</o:Paragraphs><o:Company>Microsoft</o:Company></o:DocumentProperties><o:CustomDocumentProperties><o:KSOProductBuildVer dt:dt="string" >2052-11.1.0.11194</o:KSOProductBuildVer><o:ICV dt:dt="string" >8C236054519641B8957CE8CEA2C7A724</o:ICV></o:CustomDocumentProperties></xml><![endif]--><!--[if gte mso 9]><xml><o:OfficeDocumentSettings></o:OfficeDocumentSettings></xml><![endif]--><!--[if gte mso 9]><xml><w:WordDocument><w:BrowserLevel>MicrosoftInternetExplorer4</w:BrowserLevel><w:DisplayHorizontalDrawingGridEvery>0</w:DisplayHorizontalDrawingGridEvery><w:DisplayVerticalDrawingGridEvery>2</w:DisplayVerticalDrawingGridEvery><w:DocumentKind>DocumentNotSpecified</w:DocumentKind><w:DrawingGridVerticalSpacing>7.8 °õ</w:DrawingGridVerticalSpacing><w:PunctuationKerning></w:PunctuationKerning><w:View>Web</w:View><w:Compatibility><w:AdjustLineHeightInTable/><w:DontGrowAutofit/><w:BalanceSingleByteDoubleByteWidth/><w:DoNotExpandShiftReturn/><w:UseFELayout/></w:Compatibility><w:Zoom>0</w:Zoom></w:WordDocument></xml><![endif]--><!--[if gte mso 9]><xml><w:LatentStyles DefLockedState="false"  DefUnhideWhenUsed="true"  DefSemiHidden="true"  DefQFormat="false"  DefPriority="99"  LatentStyleCount="260" >
+<html xmlns:o="urn:schemas-microsoft-com:office:office" xmlns:w="urn:schemas-microsoft-com:office:word" xmlns:dt="uuid:C2F41010-65B3-11d1-A29F-00AA00C14882" xmlns="http://www.w3.org/TR/REC-html40"><head><meta http-equiv=Content-Type  content="text/html; charset=utf8" ><meta name=ProgId  content=Word.Document ><meta name=Generator  content="Microsoft Word 14" ><meta name=Originator  content="Microsoft Word 14" ><title></title><!--[if gte mso 9]><xml><o:DocumentProperties><o:Author>USER</o:Author><o:LastAuthor>çº¸ä¼ä¸‹çš„çƒŸé›¨</o:LastAuthor><o:Revision>1</o:Revision><o:Pages>1</o:Pages><o:Characters>192</o:Characters><o:Lines>1</o:Lines><o:Paragraphs>1</o:Paragraphs><o:Company>Microsoft</o:Company></o:DocumentProperties><o:CustomDocumentProperties><o:KSOProductBuildVer dt:dt="string" >2052-11.1.0.11194</o:KSOProductBuildVer><o:ICV dt:dt="string" >8C236054519641B8957CE8CEA2C7A724</o:ICV></o:CustomDocumentProperties></xml><![endif]--><!--[if gte mso 9]><xml><o:OfficeDocumentSettings></o:OfficeDocumentSettings></xml><![endif]--><!--[if gte mso 9]><xml><w:WordDocument><w:BrowserLevel>MicrosoftInternetExplorer4</w:BrowserLevel><w:DisplayHorizontalDrawingGridEvery>0</w:DisplayHorizontalDrawingGridEvery><w:DisplayVerticalDrawingGridEvery>2</w:DisplayVerticalDrawingGridEvery><w:DocumentKind>DocumentNotSpecified</w:DocumentKind><w:DrawingGridVerticalSpacing>7.8 ç£…</w:DrawingGridVerticalSpacing><w:PunctuationKerning></w:PunctuationKerning><w:View>Web</w:View><w:Compatibility><w:AdjustLineHeightInTable/><w:DontGrowAutofit/><w:BalanceSingleByteDoubleByteWidth/><w:DoNotExpandShiftReturn/><w:UseFELayout/></w:Compatibility><w:Zoom>0</w:Zoom></w:WordDocument></xml><![endif]--><!--[if gte mso 9]><xml><w:LatentStyles DefLockedState="false"  DefUnhideWhenUsed="true"  DefSemiHidden="true"  DefQFormat="false"  DefPriority="99"  LatentStyleCount="260" >
     <w:LsdException Locked="false"  Priority="0"  SemiHidden="false"  UnhideWhenUsed="false"  QFormat="true"  Name="Normal" ></w:LsdException>
 <w:LsdException Locked="false"  Priority="9"  SemiHidden="false"  UnhideWhenUsed="false"  QFormat="true"  Name="heading 1" ></w:LsdException>
 <w:LsdException Locked="false"  Priority="9"  SemiHidden="false"  QFormat="true"  Name="heading 2" ></w:LsdException>
@@ -263,7 +263,7 @@ font-family:"Times New Roman";
 }
 
 @font-face{
-font-family:"ËÎÌå";
+font-family:"å®‹ä½“";
 }
 
 @font-face{
@@ -275,7 +275,7 @@ font-family:"Wingdings";
 }
 
 p.MsoNormal{
-mso-style-name:ÕıÎÄ;
+mso-style-name:æ­£æ–‡;
 mso-style-parent:"";
 margin:0pt;
 margin-bottom:.0001pt;
@@ -283,7 +283,7 @@ mso-pagination:none;
 text-align:justify;
 text-justify:inter-ideograph;
 font-family:Calibri;
-mso-fareast-font-family:ËÎÌå;
+mso-fareast-font-family:å®‹ä½“;
 mso-bidi-font-family:'Times New Roman';
 font-size:10.5000pt;
 mso-font-kerning:1.0000pt;
@@ -309,7 +309,7 @@ color:red;
 }
 
 table.MsoNormalTable{
-mso-style-name:ÆÕÍ¨±í¸ñ;
+mso-style-name:æ™®é€šè¡¨æ ¼;
 mso-style-parent:"";
 mso-style-noshow:yes;
 mso-tstyle-rowband-size:0;
@@ -335,28 +335,28 @@ layout-grid:15.6000pt;
 mso-header-margin:42.5500pt;
 mso-footer-margin:49.6000pt;
 }
-div.Section0{page:Section0;}</style></head><body style="tab-interval:21pt;text-justify-trim:punctuation;" ><!--StartFragment--><div class="Section0"  style="layout-grid:15.6000pt;" ><p class=MsoNormal  align=center  style="text-align:center;" ><span style="mso-spacerun:'yes';font-family:ËÎÌå;mso-ascii-font-family:Calibri;
+div.Section0{page:Section0;}</style></head><body style="tab-interval:21pt;text-justify-trim:punctuation;" ><!--StartFragment--><div class="Section0"  style="layout-grid:15.6000pt;" ><p class=MsoNormal  align=center  style="text-align:center;" ><span style="mso-spacerun:'yes';font-family:å®‹ä½“;mso-ascii-font-family:Calibri;
 mso-hansi-font-family:Calibri;mso-bidi-font-family:'Times New Roman';font-size:10.5000pt;
-mso-font-kerning:1.0000pt;" ><font face="ËÎÌå" >ÍøÉÏ¾Û½ÌÑ§ÃûÊ¦</font> ÔÆ¶ËÖúÑ§ÉúÔ²ÃÎ</span><span style="mso-spacerun:'yes';font-family:Calibri;mso-fareast-font-family:ËÎÌå;
-mso-bidi-font-family:'Times New Roman';font-size:10.5000pt;mso-font-kerning:1.0000pt;" ><o:p></o:p></span></p><p class=MsoNormal  style="text-indent:21.0000pt;mso-char-indent-count:2.0000;" ><span style="mso-spacerun:'yes';font-family:ËÎÌå;mso-ascii-font-family:Calibri;
+mso-font-kerning:1.0000pt;" ><font face="å®‹ä½“" >ç½‘ä¸Šèšæ•™å­¦åå¸ˆ</font> äº‘ç«¯åŠ©å­¦ç”Ÿåœ†æ¢¦</span><span style="mso-spacerun:'yes';font-family:Calibri;mso-fareast-font-family:å®‹ä½“;
+mso-bidi-font-family:'Times New Roman';font-size:10.5000pt;mso-font-kerning:1.0000pt;" ><o:p></o:p></span></p><p class=MsoNormal  style="text-indent:21.0000pt;mso-char-indent-count:2.0000;" ><span style="mso-spacerun:'yes';font-family:å®‹ä½“;mso-ascii-font-family:Calibri;
 mso-hansi-font-family:Calibri;mso-bidi-font-family:'Times New Roman';font-size:10.5000pt;
-mso-font-kerning:1.0000pt;" ><font face="ËÎÌå" >Îª½øÒ»²½Ìá¸ßÑ§Ğ£Ñ§Éú×¨Éı±¾ÉÏÏßÂÊºÍÂ¼È¡ÂÊ£¬ÀíÑ§²¿¸ù¾İÑ§Ğ£¹¤×÷ÒªÇó£¬ÀûÓÃº®¼ÙºÍÖÜÄ©¼ÙÆÚ£¬ÖÆ¶¨ÁË×¨Éı±¾¸¨µ¼¹¤×÷·½°¸£¬×é½¨ÁË</font></span><span style="mso-spacerun:'yes';font-family:Calibri;mso-fareast-font-family:ËÎÌå;
-mso-bidi-font-family:'Times New Roman';font-size:10.5000pt;mso-font-kerning:1.0000pt;" ><font face="ËÎÌå" >ÒÔ</font></span><span style="mso-spacerun:'yes';font-family:ËÎÌå;mso-ascii-font-family:Calibri;
+mso-font-kerning:1.0000pt;" ><font face="å®‹ä½“" >ä¸ºè¿›ä¸€æ­¥æé«˜å­¦æ ¡å­¦ç”Ÿä¸“å‡æœ¬ä¸Šçº¿ç‡å’Œå½•å–ç‡ï¼Œç†å­¦éƒ¨æ ¹æ®å­¦æ ¡å·¥ä½œè¦æ±‚ï¼Œåˆ©ç”¨å¯’å‡å’Œå‘¨æœ«å‡æœŸï¼Œåˆ¶å®šäº†ä¸“å‡æœ¬è¾…å¯¼å·¥ä½œæ–¹æ¡ˆï¼Œç»„å»ºäº†</font></span><span style="mso-spacerun:'yes';font-family:Calibri;mso-fareast-font-family:å®‹ä½“;
+mso-bidi-font-family:'Times New Roman';font-size:10.5000pt;mso-font-kerning:1.0000pt;" ><font face="å®‹ä½“" >ä»¥</font></span><span style="mso-spacerun:'yes';font-family:å®‹ä½“;mso-ascii-font-family:Calibri;
 mso-hansi-font-family:Calibri;mso-bidi-font-family:'Times New Roman';font-size:10.5000pt;
-mso-font-kerning:1.0000pt;" ><font face="ËÎÌå" >ºÓÄÏÊ¡½ÌÑ§ÃûÊ¦Â½ÒËÇå</font></span><span style="mso-spacerun:'yes';font-family:Calibri;mso-fareast-font-family:ËÎÌå;
-mso-bidi-font-family:'Times New Roman';font-size:10.5000pt;mso-font-kerning:1.0000pt;" ><font face="ËÎÌå" >Îª´ú±íµÄ</font></span><span style="mso-spacerun:'yes';font-family:ËÎÌå;mso-ascii-font-family:Calibri;
+mso-font-kerning:1.0000pt;" ><font face="å®‹ä½“" >æ²³å—çœæ•™å­¦åå¸ˆé™†å®œæ¸…</font></span><span style="mso-spacerun:'yes';font-family:Calibri;mso-fareast-font-family:å®‹ä½“;
+mso-bidi-font-family:'Times New Roman';font-size:10.5000pt;mso-font-kerning:1.0000pt;" ><font face="å®‹ä½“" >ä¸ºä»£è¡¨çš„</font></span><span style="mso-spacerun:'yes';font-family:å®‹ä½“;mso-ascii-font-family:Calibri;
 mso-hansi-font-family:Calibri;mso-bidi-font-family:'Times New Roman';font-size:10.5000pt;
-mso-font-kerning:1.0000pt;" ><font face="Calibri" >10</font><font face="ËÎÌå" >ÈË½ÌÑ§ÍÅ¶Ó£¬Ãâ·ÑÎª×¨Éı±¾Ñ§Éú½øĞĞÏßÉÏ×¨Éı±¾ÊıÑ§¸¨µ¼¡£½ÌÑ§ÍÅ¶Ó¼¯ÖĞÑĞÌÖÁË½ü</font><font face="Calibri" >15</font><font face="ËÎÌå" >Äê×¨Éı±¾</font></span><span style="mso-spacerun:'yes';font-family:Calibri;mso-fareast-font-family:ËÎÌå;
-mso-bidi-font-family:'Times New Roman';font-size:10.5000pt;mso-font-kerning:1.0000pt;" ><font face="ËÎÌå" >¿¼ÊÔÕæÌâ£¬</font></span><span style="mso-spacerun:'yes';font-family:ËÎÌå;mso-ascii-font-family:Calibri;
+mso-font-kerning:1.0000pt;" ><font face="Calibri" >10</font><font face="å®‹ä½“" >äººæ•™å­¦å›¢é˜Ÿï¼Œå…è´¹ä¸ºä¸“å‡æœ¬å­¦ç”Ÿè¿›è¡Œçº¿ä¸Šä¸“å‡æœ¬æ•°å­¦è¾…å¯¼ã€‚æ•™å­¦å›¢é˜Ÿé›†ä¸­ç ”è®¨äº†è¿‘</font><font face="Calibri" >15</font><font face="å®‹ä½“" >å¹´ä¸“å‡æœ¬</font></span><span style="mso-spacerun:'yes';font-family:Calibri;mso-fareast-font-family:å®‹ä½“;
+mso-bidi-font-family:'Times New Roman';font-size:10.5000pt;mso-font-kerning:1.0000pt;" ><font face="å®‹ä½“" >è€ƒè¯•çœŸé¢˜ï¼Œ</font></span><span style="mso-spacerun:'yes';font-family:å®‹ä½“;mso-ascii-font-family:Calibri;
 mso-hansi-font-family:Calibri;mso-bidi-font-family:'Times New Roman';font-size:10.5000pt;
-mso-font-kerning:1.0000pt;" ><font face="ËÎÌå" >Í¨¹ı</font>¡°¼¯ÖĞÊÚ¿Î<font face="Calibri" >+</font><font face="ËÎÌå" >·Ö°à´ğÒÉ¡±Ä£Ê½½øĞĞ</font></span><span style="mso-spacerun:'yes';font-family:Calibri;mso-fareast-font-family:ËÎÌå;
-mso-bidi-font-family:'Times New Roman';font-size:10.5000pt;mso-font-kerning:1.0000pt;" ><font face="ËÎÌå" >¸¨µ¼</font></span><span style="mso-spacerun:'yes';font-family:ËÎÌå;mso-ascii-font-family:Calibri;
+mso-font-kerning:1.0000pt;" ><font face="å®‹ä½“" >é€šè¿‡</font>â€œé›†ä¸­æˆè¯¾<font face="Calibri" >+</font><font face="å®‹ä½“" >åˆ†ç­ç­”ç–‘â€æ¨¡å¼è¿›è¡Œ</font></span><span style="mso-spacerun:'yes';font-family:Calibri;mso-fareast-font-family:å®‹ä½“;
+mso-bidi-font-family:'Times New Roman';font-size:10.5000pt;mso-font-kerning:1.0000pt;" ><font face="å®‹ä½“" >è¾…å¯¼</font></span><span style="mso-spacerun:'yes';font-family:å®‹ä½“;mso-ascii-font-family:Calibri;
 mso-hansi-font-family:Calibri;mso-bidi-font-family:'Times New Roman';font-size:10.5000pt;
-mso-font-kerning:1.0000pt;" ><font face="ËÎÌå" >£¬ÎªÑ§Éú¿ìËÙÍ»ÆÆ¶Ì°å£¬º»Êµ»ù´¡ÖªÊ¶£¬ÇĞÊµÎªÑ§Éú×¨Éı±¾Ìá¹©ÓÅÖÊ·şÎñºÍ°ïÖú£¬ÎªÎÒĞ£³ÖĞøÌá¸ßÈË²ÅÅàÑøÖÊÁ¿·¢»ÓÁ¦Á¿¡£</font></span><span style="mso-spacerun:'yes';font-family:Calibri;mso-fareast-font-family:ËÎÌå;
-mso-bidi-font-family:'Times New Roman';font-size:10.5000pt;mso-font-kerning:1.0000pt;" ><o:p></o:p></span></p><p class=MsoNormal ><span style="mso-spacerun:'yes';font-family:Calibri;mso-fareast-font-family:ËÎÌå;
-mso-bidi-font-family:'Times New Roman';font-size:10.5000pt;mso-font-kerning:1.0000pt;" ><o:p>&nbsp;</o:p></span></p><p class=MsoNormal ><span style="mso-spacerun:'yes';font-family:Calibri;mso-fareast-font-family:ËÎÌå;
-mso-bidi-font-family:'Times New Roman';font-size:10.5000pt;mso-font-kerning:1.0000pt;" ><o:p>&nbsp;</o:p></span></p><p class=MsoNormal ><span style="mso-spacerun:'yes';font-family:Calibri;mso-fareast-font-family:ËÎÌå;
-mso-bidi-font-family:'Times New Roman';font-size:10.5000pt;mso-font-kerning:1.0000pt;" ><o:p>&nbsp;</o:p></span></p><p class=MsoNormal ><span style="mso-spacerun:'yes';font-family:Calibri;mso-fareast-font-family:ËÎÌå;
-mso-bidi-font-family:'Times New Roman';font-size:10.5000pt;mso-font-kerning:1.0000pt;" >&#9;</span><img width="248"  height="331"  src="17.ÀíÑ§²¿×¨Éı±¾ÒåÎñ¸¨µ¼.files/17.ÀíÑ§²¿×¨Éı±¾ÒåÎñ¸¨µ¼217.png" ><span style="mso-spacerun:'yes';font-family:Calibri;mso-fareast-font-family:ËÎÌå;
-mso-bidi-font-family:'Times New Roman';font-size:10.5000pt;mso-font-kerning:1.0000pt;" >&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span><img width="218"  height="335"  src="17.ÀíÑ§²¿×¨Éı±¾ÒåÎñ¸¨µ¼.files/17.ÀíÑ§²¿×¨Éı±¾ÒåÎñ¸¨µ¼223.png" ><span style="mso-spacerun:'yes';font-family:Calibri;mso-fareast-font-family:ËÎÌå;
+mso-font-kerning:1.0000pt;" ><font face="å®‹ä½“" >ï¼Œä¸ºå­¦ç”Ÿå¿«é€Ÿçªç ´çŸ­æ¿ï¼Œå¤¯å®åŸºç¡€çŸ¥è¯†ï¼Œåˆ‡å®ä¸ºå­¦ç”Ÿä¸“å‡æœ¬æä¾›ä¼˜è´¨æœåŠ¡å’Œå¸®åŠ©ï¼Œä¸ºæˆ‘æ ¡æŒç»­æé«˜äººæ‰åŸ¹å…»è´¨é‡å‘æŒ¥åŠ›é‡ã€‚</font></span><span style="mso-spacerun:'yes';font-family:Calibri;mso-fareast-font-family:å®‹ä½“;
+mso-bidi-font-family:'Times New Roman';font-size:10.5000pt;mso-font-kerning:1.0000pt;" ><o:p></o:p></span></p><p class=MsoNormal ><span style="mso-spacerun:'yes';font-family:Calibri;mso-fareast-font-family:å®‹ä½“;
+mso-bidi-font-family:'Times New Roman';font-size:10.5000pt;mso-font-kerning:1.0000pt;" ><o:p>&nbsp;</o:p></span></p><p class=MsoNormal ><span style="mso-spacerun:'yes';font-family:Calibri;mso-fareast-font-family:å®‹ä½“;
+mso-bidi-font-family:'Times New Roman';font-size:10.5000pt;mso-font-kerning:1.0000pt;" ><o:p>&nbsp;</o:p></span></p><p class=MsoNormal ><span style="mso-spacerun:'yes';font-family:Calibri;mso-fareast-font-family:å®‹ä½“;
+mso-bidi-font-family:'Times New Roman';font-size:10.5000pt;mso-font-kerning:1.0000pt;" ><o:p>&nbsp;</o:p></span></p><p class=MsoNormal ><span style="mso-spacerun:'yes';font-family:Calibri;mso-fareast-font-family:å®‹ä½“;
+mso-bidi-font-family:'Times New Roman';font-size:10.5000pt;mso-font-kerning:1.0000pt;" >&#9;</span><img width="248"  height="331"  src="17.ç†å­¦éƒ¨ä¸“å‡æœ¬ä¹‰åŠ¡è¾…å¯¼.files/17.ç†å­¦éƒ¨ä¸“å‡æœ¬ä¹‰åŠ¡è¾…å¯¼217.png" ><span style="mso-spacerun:'yes';font-family:Calibri;mso-fareast-font-family:å®‹ä½“;
+mso-bidi-font-family:'Times New Roman';font-size:10.5000pt;mso-font-kerning:1.0000pt;" >&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span><img width="218"  height="335"  src="17.ç†å­¦éƒ¨ä¸“å‡æœ¬ä¹‰åŠ¡è¾…å¯¼.files/17.ç†å­¦éƒ¨ä¸“å‡æœ¬ä¹‰åŠ¡è¾…å¯¼223.png" ><span style="mso-spacerun:'yes';font-family:Calibri;mso-fareast-font-family:å®‹ä½“;
 mso-bidi-font-family:'Times New Roman';font-size:10.5000pt;mso-font-kerning:1.0000pt;" ><o:p></o:p></span></p></div><!--EndFragment--></body></html>
