--- a/formatPages/18.学生宿舍加装空调简介.html
+++ b/formatPages/18.学生宿舍加装空调简介.html
@@ -1,5 +1,5 @@
 
-<html xmlns:o="urn:schemas-microsoft-com:office:office" xmlns:w="urn:schemas-microsoft-com:office:word" xmlns:dt="uuid:C2F41010-65B3-11d1-A29F-00AA00C14882" xmlns="http://www.w3.org/TR/REC-html40"><head><meta http-equiv=Content-Type  content="text/html; charset=gb2312" ><meta name=ProgId  content=Word.Document ><meta name=Generator  content="Microsoft Word 14" ><meta name=Originator  content="Microsoft Word 14" ><title></title><!--[if gte mso 9]><xml><o:DocumentProperties><o:Author>Administrator</o:Author><o:LastAuthor>Ö½É¡ÏÂµÄÑÌÓê</o:LastAuthor><o:Revision>1</o:Revision><o:Pages>1</o:Pages></o:DocumentProperties><o:CustomDocumentProperties><o:KSOProductBuildVer dt:dt="string" >2052-11.1.0.11194</o:KSOProductBuildVer><o:ICV dt:dt="string" >F6E7348DCB8846259D5281978122837E</o:ICV></o:CustomDocumentProperties></xml><![endif]--><!--[if gte mso 9]><xml><o:OfficeDocumentSettings></o:OfficeDocumentSettings></xml><![endif]--><!--[if gte mso 9]><xml><w:WordDocument><w:BrowserLevel>MicrosoftInternetExplorer4</w:BrowserLevel><w:DisplayHorizontalDrawingGridEvery>0</w:DisplayHorizontalDrawingGridEvery><w:DisplayVerticalDrawingGridEvery>2</w:DisplayVerticalDrawingGridEvery><w:DocumentKind>DocumentNotSpecified</w:DocumentKind><w:DrawingGridVerticalSpacing>7.8 °õ</w:DrawingGridVerticalSpacing><w:PunctuationKerning></w:PunctuationKerning><w:View>Web</w:View><w:Compatibility><w:AdjustLineHeightInTable/><w:DontGrowAutofit/><w:BalanceSingleByteDoubleByteWidth/><w:DoNotExpandShiftReturn/><w:UseFELayout/></w:Compatibility><w:Zoom>0</w:Zoom></w:WordDocument></xml><![endif]--><!--[if gte mso 9]><xml><w:LatentStyles DefLockedState="false"  DefUnhideWhenUsed="true"  DefSemiHidden="true"  DefQFormat="false"  DefPriority="99"  LatentStyleCount="260" >
+<html xmlns:o="urn:schemas-microsoft-com:office:office" xmlns:w="urn:schemas-microsoft-com:office:word" xmlns:dt="uuid:C2F41010-65B3-11d1-A29F-00AA00C14882" xmlns="http://www.w3.org/TR/REC-html40"><head><meta http-equiv=Content-Type  content="text/html; charset=utf8" ><meta name=ProgId  content=Word.Document ><meta name=Generator  content="Microsoft Word 14" ><meta name=Originator  content="Microsoft Word 14" ><title></title><!--[if gte mso 9]><xml><o:DocumentProperties><o:Author>Administrator</o:Author><o:LastAuthor>çº¸ä¼ä¸‹çš„çƒŸé›¨</o:LastAuthor><o:Revision>1</o:Revision><o:Pages>1</o:Pages></o:DocumentProperties><o:CustomDocumentProperties><o:KSOProductBuildVer dt:dt="string" >2052-11.1.0.11194</o:KSOProductBuildVer><o:ICV dt:dt="string" >F6E7348DCB8846259D5281978122837E</o:ICV></o:CustomDocumentProperties></xml><![endif]--><!--[if gte mso 9]><xml><o:OfficeDocumentSettings></o:OfficeDocumentSettings></xml><![endif]--><!--[if gte mso 9]><xml><w:WordDocument><w:BrowserLevel>MicrosoftInternetExplorer4</w:BrowserLevel><w:DisplayHorizontalDrawingGridEvery>0</w:DisplayHorizontalDrawingGridEvery><w:DisplayVerticalDrawingGridEvery>2</w:DisplayVerticalDrawingGridEvery><w:DocumentKind>DocumentNotSpecified</w:DocumentKind><w:DrawingGridVerticalSpacing>7.8 ç£…</w:DrawingGridVerticalSpacing><w:PunctuationKerning></w:PunctuationKerning><w:View>Web</w:View><w:Compatibility><w:AdjustLineHeightInTable/><w:DontGrowAutofit/><w:BalanceSingleByteDoubleByteWidth/><w:DoNotExpandShiftReturn/><w:UseFELayout/></w:Compatibility><w:Zoom>0</w:Zoom></w:WordDocument></xml><![endif]--><!--[if gte mso 9]><xml><w:LatentStyles DefLockedState="false"  DefUnhideWhenUsed="true"  DefSemiHidden="true"  DefQFormat="false"  DefPriority="99"  LatentStyleCount="260" >
     <w:LsdException Locked="false"  Priority="0"  SemiHidden="false"  UnhideWhenUsed="false"  QFormat="true"  Name="Normal" ></w:LsdException>
 <w:LsdException Locked="false"  Priority="0"  SemiHidden="false"  UnhideWhenUsed="false"  QFormat="true"  Name="heading 1" ></w:LsdException>
 <w:LsdException Locked="false"  Priority="0"  SemiHidden="false"  QFormat="true"  Name="heading 2" ></w:LsdException>
@@ -263,7 +263,7 @@ font-family:"Times New Roman";
 }
 
 @font-face{
-font-family:"ËÎÌå";
+font-family:"å®‹ä½“";
 }
 
 @font-face{
@@ -275,11 +275,11 @@ font-family:"Wingdings";
 }
 
 @font-face{
-font-family:"·½Õı´ÖºÚËÎ¼òÌå";
+font-family:"æ–¹æ­£ç²—é»‘å®‹ç®€ä½“";
 }
 
 p.MsoNormal{
-mso-style-name:ÕıÎÄ;
+mso-style-name:æ­£æ–‡;
 mso-style-parent:"";
 margin:0pt;
 margin-bottom:.0001pt;
@@ -287,7 +287,7 @@ mso-pagination:none;
 text-align:justify;
 text-justify:inter-ideograph;
 font-family:Calibri;
-mso-fareast-font-family:ËÎÌå;
+mso-fareast-font-family:å®‹ä½“;
 mso-bidi-font-family:'Times New Roman';
 font-size:10.5000pt;
 mso-font-kerning:1.0000pt;
@@ -313,7 +313,7 @@ color:red;
 }
 
 table.MsoNormalTable{
-mso-style-name:ÆÕÍ¨±í¸ñ;
+mso-style-name:æ™®é€šè¡¨æ ¼;
 mso-style-parent:"";
 mso-style-noshow:yes;
 mso-tstyle-rowband-size:0;
@@ -341,13 +341,13 @@ mso-footer-margin:49.6000pt;
 }
 div.Section0{page:Section0;}</style></head><body style="tab-interval:21pt;text-justify-trim:punctuation;" ><!--StartFragment--><div class="Section0"  style="layout-grid:15.6000pt;" ><p class=MsoNormal  align=center  style="margin-top:15.6500pt;margin-bottom:15.6500pt;mso-para-margin-top:1.0000gd;
 mso-para-margin-bottom:1.0000gd;text-autospace:ideograph-numeric;mso-pagination:none;
-text-align:center;" ><span style="mso-spacerun:'yes';font-family:·½Õı´ÖºÚËÎ¼òÌå;font-size:18.0000pt;
-mso-font-kerning:1.0000pt;" ><font face="·½Õı´ÖºÚËÎ¼òÌå" >Ñ§Éú¹«Ô¢¼Ó×°¿Õµ÷ÏîÄ¿¼ò½é</font></span><span style="mso-spacerun:'yes';font-family:·½Õı´ÖºÚËÎ¼òÌå;font-size:18.0000pt;
-mso-font-kerning:1.0000pt;" ><o:p></o:p></span></p><p class=MsoNormal  style="text-indent:28.0000pt;mso-char-indent-count:2.0000;" ><span style="mso-spacerun:'yes';font-family:ËÎÌå;mso-ascii-font-family:Calibri;
+text-align:center;" ><span style="mso-spacerun:'yes';font-family:æ–¹æ­£ç²—é»‘å®‹ç®€ä½“;font-size:18.0000pt;
+mso-font-kerning:1.0000pt;" ><font face="æ–¹æ­£ç²—é»‘å®‹ç®€ä½“" >å­¦ç”Ÿå…¬å¯“åŠ è£…ç©ºè°ƒé¡¹ç›®ç®€ä»‹</font></span><span style="mso-spacerun:'yes';font-family:æ–¹æ­£ç²—é»‘å®‹ç®€ä½“;font-size:18.0000pt;
+mso-font-kerning:1.0000pt;" ><o:p></o:p></span></p><p class=MsoNormal  style="text-indent:28.0000pt;mso-char-indent-count:2.0000;" ><span style="mso-spacerun:'yes';font-family:å®‹ä½“;mso-ascii-font-family:Calibri;
 mso-hansi-font-family:Calibri;mso-bidi-font-family:'Times New Roman';font-size:14.0000pt;
-mso-font-kerning:1.0000pt;" ><font face="ËÎÌå" >¾Û½¹Ñ§ÉúËßÇó£¬½â¾öÑ§Éú¼±ÄÑ³îÅÎÎÊÌâ£¬¸ÄÉÆÑ§Éú×¡ËŞ»·¾³£¬Ñ§Ğ£³ÉÁ¢¹¤×÷×¨°à£¬ºóÇÚ´¦Ç£Í·»ı¼«Ğ­µ÷ÍÆ½øÓ¢²Å¡¢±±ÁÖĞ£ÇøÑ§Éú¹«Ô¢¿Õµ÷°²×°ÏîÄ¿¡£ÎªÈ·±£¿Õµ÷°²×°µ½Î»ºó¼´¿ÉÊ¹ÓÃ£¬Ğ£ÇøµçÁ¦ÔöÈİºÍ¹©µçÏßÂ·¸ÄÔìÏîÄ¿ÓëÑ§Éú¹«Ô¢¿Õµ÷°²×°Í¬²½½øĞĞ£¬¿Õµ÷°²×°½«ÊµÏÖÑ§Éú¹«Ô¢È«¸²¸Ç£¬¹²¼Æ»®°²×°·ÖÌå±Ú¹ÒÊ½ÀäÅ¯¿Õµ÷</font></span><span style="mso-spacerun:'yes';font-family:ËÎÌå;mso-ascii-font-family:Calibri;
+mso-font-kerning:1.0000pt;" ><font face="å®‹ä½“" >èšç„¦å­¦ç”Ÿè¯‰æ±‚ï¼Œè§£å†³å­¦ç”Ÿæ€¥éš¾æ„ç›¼é—®é¢˜ï¼Œæ”¹å–„å­¦ç”Ÿä½å®¿ç¯å¢ƒï¼Œå­¦æ ¡æˆç«‹å·¥ä½œä¸“ç­ï¼Œåå‹¤å¤„ç‰µå¤´ç§¯æåè°ƒæ¨è¿›è‹±æ‰ã€åŒ—æ—æ ¡åŒºå­¦ç”Ÿå…¬å¯“ç©ºè°ƒå®‰è£…é¡¹ç›®ã€‚ä¸ºç¡®ä¿ç©ºè°ƒå®‰è£…åˆ°ä½åå³å¯ä½¿ç”¨ï¼Œæ ¡åŒºç”µåŠ›å¢å®¹å’Œä¾›ç”µçº¿è·¯æ”¹é€ é¡¹ç›®ä¸å­¦ç”Ÿå…¬å¯“ç©ºè°ƒå®‰è£…åŒæ­¥è¿›è¡Œï¼Œç©ºè°ƒå®‰è£…å°†å®ç°å­¦ç”Ÿå…¬å¯“å…¨è¦†ç›–ï¼Œå…±è®¡åˆ’å®‰è£…åˆ†ä½“å£æŒ‚å¼å†·æš–ç©ºè°ƒ</font></span><span style="mso-spacerun:'yes';font-family:å®‹ä½“;mso-ascii-font-family:Calibri;
 mso-hansi-font-family:Calibri;mso-bidi-font-family:'Times New Roman';font-size:14.0000pt;
-mso-font-kerning:1.0000pt;" ><font face="Calibri" >3051</font><font face="ËÎÌå" >Ì¨¡£¿Õµ÷°²×°ÓëÅäÌ×ÏîÄ¿ÔÚ³£Ì¬»¯ÒßÇé·À¿ØĞÎÊÆÏÂ½ôÕÅ¡¢ÓĞĞò¡¢¿ìËÙµÄÊ©¹¤ÖĞ£¬½«°´ÕÕÊµÊ©¼Æ»®°´Ê±Íê¹¤¡£</font></span><span style="mso-spacerun:'yes';font-family:ËÎÌå;mso-ascii-font-family:Calibri;
+mso-font-kerning:1.0000pt;" ><font face="Calibri" >3051</font><font face="å®‹ä½“" >å°ã€‚ç©ºè°ƒå®‰è£…ä¸é…å¥—é¡¹ç›®åœ¨å¸¸æ€åŒ–ç–«æƒ…é˜²æ§å½¢åŠ¿ä¸‹ç´§å¼ ã€æœ‰åºã€å¿«é€Ÿçš„æ–½å·¥ä¸­ï¼Œå°†æŒ‰ç…§å®æ–½è®¡åˆ’æŒ‰æ—¶å®Œå·¥ã€‚</font></span><span style="mso-spacerun:'yes';font-family:å®‹ä½“;mso-ascii-font-family:Calibri;
 mso-hansi-font-family:Calibri;mso-bidi-font-family:'Times New Roman';font-size:14.0000pt;
-mso-font-kerning:1.0000pt;" ><o:p></o:p></span></p><p class=MsoNormal  align=center  style="text-align:center;" ><img width="497"  height="497"  src="18.Ñ§ÉúËŞÉá¼Ó×°¿Õµ÷¼ò½é.files/18¡ªÑ§ÉúËŞÉá¼Ó×°¿Õµ÷¼ò½é203.png" ><span style="mso-spacerun:'yes';font-family:Calibri;mso-fareast-font-family:ËÎÌå;
+mso-font-kerning:1.0000pt;" ><o:p></o:p></span></p><p class=MsoNormal  align=center  style="text-align:center;" ><img width="497"  height="497"  src="18.å­¦ç”Ÿå®¿èˆåŠ è£…ç©ºè°ƒç®€ä»‹.files/18â€”å­¦ç”Ÿå®¿èˆåŠ è£…ç©ºè°ƒç®€ä»‹203.png" ><span style="mso-spacerun:'yes';font-family:Calibri;mso-fareast-font-family:å®‹ä½“;
 mso-bidi-font-family:'Times New Roman';font-size:14.0000pt;mso-font-kerning:1.0000pt;" ><o:p>&nbsp;</o:p></span></p></div><!--EndFragment--></body></html>
