--- a/formatPages/20.空调专业学生为退休老干部清洗空调——能源与智能工程学院“我为师生办实事”项目简介.html
+++ b/formatPages/20.空调专业学生为退休老干部清洗空调——能源与智能工程学院“我为师生办实事”项目简介.html
@@ -1,5 +1,5 @@
 
-<html xmlns:o="urn:schemas-microsoft-com:office:office" xmlns:w="urn:schemas-microsoft-com:office:word" xmlns:dt="uuid:C2F41010-65B3-11d1-A29F-00AA00C14882" xmlns="http://www.w3.org/TR/REC-html40"><head><meta http-equiv=Content-Type  content="text/html; charset=gb2312" ><meta name=ProgId  content=Word.Document ><meta name=Generator  content="Microsoft Word 14" ><meta name=Originator  content="Microsoft Word 14" ><title></title><!--[if gte mso 9]><xml><o:DocumentProperties><o:Author>Administrator</o:Author><o:LastAuthor>Ö½É¡ÏÂµÄÑÌÓê</o:LastAuthor><o:Revision>1</o:Revision><o:Pages>1</o:Pages></o:DocumentProperties><o:CustomDocumentProperties><o:KSOProductBuildVer dt:dt="string" >2052-11.1.0.11194</o:KSOProductBuildVer><o:ICV dt:dt="string" >1B39FB87E21B4DA08BFE1ABC8AAA44EA</o:ICV></o:CustomDocumentProperties></xml><![endif]--><!--[if gte mso 9]><xml><o:OfficeDocumentSettings></o:OfficeDocumentSettings></xml><![endif]--><!--[if gte mso 9]><xml><w:WordDocument><w:BrowserLevel>MicrosoftInternetExplorer4</w:BrowserLevel><w:DisplayHorizontalDrawingGridEvery>0</w:DisplayHorizontalDrawingGridEvery><w:DisplayVerticalDrawingGridEvery>2</w:DisplayVerticalDrawingGridEvery><w:DocumentKind>DocumentNotSpecified</w:DocumentKind><w:DrawingGridVerticalSpacing>7.8 °õ</w:DrawingGridVerticalSpacing><w:View>Web</w:View><w:Compatibility><w:AdjustLineHeightInTable/><w:DontGrowAutofit/><w:BalanceSingleByteDoubleByteWidth/><w:DoNotExpandShiftReturn/><w:UseFELayout/></w:Compatibility><w:Zoom>0</w:Zoom></w:WordDocument></xml><![endif]--><!--[if gte mso 9]><xml><w:LatentStyles DefLockedState="false"  DefUnhideWhenUsed="true"  DefSemiHidden="true"  DefQFormat="false"  DefPriority="99"  LatentStyleCount="260" >
+<html xmlns:o="urn:schemas-microsoft-com:office:office" xmlns:w="urn:schemas-microsoft-com:office:word" xmlns:dt="uuid:C2F41010-65B3-11d1-A29F-00AA00C14882" xmlns="http://www.w3.org/TR/REC-html40"><head><meta http-equiv=Content-Type  content="text/html; charset=utf8" ><meta name=ProgId  content=Word.Document ><meta name=Generator  content="Microsoft Word 14" ><meta name=Originator  content="Microsoft Word 14" ><title></title><!--[if gte mso 9]><xml><o:DocumentProperties><o:Author>Administrator</o:Author><o:LastAuthor>çº¸ä¼ä¸‹çš„çƒŸé›¨</o:LastAuthor><o:Revision>1</o:Revision><o:Pages>1</o:Pages></o:DocumentProperties><o:CustomDocumentProperties><o:KSOProductBuildVer dt:dt="string" >2052-11.1.0.11194</o:KSOProductBuildVer><o:ICV dt:dt="string" >1B39FB87E21B4DA08BFE1ABC8AAA44EA</o:ICV></o:CustomDocumentProperties></xml><![endif]--><!--[if gte mso 9]><xml><o:OfficeDocumentSettings></o:OfficeDocumentSettings></xml><![endif]--><!--[if gte mso 9]><xml><w:WordDocument><w:BrowserLevel>MicrosoftInternetExplorer4</w:BrowserLevel><w:DisplayHorizontalDrawingGridEvery>0</w:DisplayHorizontalDrawingGridEvery><w:DisplayVerticalDrawingGridEvery>2</w:DisplayVerticalDrawingGridEvery><w:DocumentKind>DocumentNotSpecified</w:DocumentKind><w:DrawingGridVerticalSpacing>7.8 ç£…</w:DrawingGridVerticalSpacing><w:View>Web</w:View><w:Compatibility><w:AdjustLineHeightInTable/><w:DontGrowAutofit/><w:BalanceSingleByteDoubleByteWidth/><w:DoNotExpandShiftReturn/><w:UseFELayout/></w:Compatibility><w:Zoom>0</w:Zoom></w:WordDocument></xml><![endif]--><!--[if gte mso 9]><xml><w:LatentStyles DefLockedState="false"  DefUnhideWhenUsed="true"  DefSemiHidden="true"  DefQFormat="false"  DefPriority="99"  LatentStyleCount="260" >
     <w:LsdException Locked="false"  Priority="0"  SemiHidden="false"  UnhideWhenUsed="false"  QFormat="true"  Name="Normal" ></w:LsdException>
 <w:LsdException Locked="false"  Priority="0"  SemiHidden="false"  UnhideWhenUsed="false"  QFormat="true"  Name="heading 1" ></w:LsdException>
 <w:LsdException Locked="false"  Priority="0"  SemiHidden="false"  QFormat="true"  Name="heading 2" ></w:LsdException>
@@ -263,7 +263,7 @@ font-family:"Times New Roman";
 }
 
 @font-face{
-font-family:"ËÎÌå";
+font-family:"å®‹ä½“";
 }
 
 @font-face{
@@ -275,11 +275,11 @@ font-family:"Calibri";
 }
 
 @font-face{
-font-family:"·ÂËÎ";
+font-family:"ä»¿å®‹";
 }
 
 p.MsoNormal{
-mso-style-name:ÕıÎÄ;
+mso-style-name:æ­£æ–‡;
 mso-style-parent:"";
 margin:0pt;
 margin-bottom:.0001pt;
@@ -287,7 +287,7 @@ mso-pagination:none;
 text-align:justify;
 text-justify:inter-ideograph;
 font-family:Calibri;
-mso-fareast-font-family:ËÎÌå;
+mso-fareast-font-family:å®‹ä½“;
 mso-bidi-font-family:'Times New Roman';
 font-size:10.5000pt;
 mso-font-kerning:1.0000pt;
@@ -298,7 +298,7 @@ font-family:'Times New Roman';
 }
 
 p.p{
-mso-style-name:"ÆÕÍ¨\(ÍøÕ¾\)";
+mso-style-name:"æ™®é€š\(ç½‘ç«™\)";
 margin-top:5.0000pt;
 margin-right:0.0000pt;
 margin-bottom:5.0000pt;
@@ -308,7 +308,7 @@ mso-margin-bottom-alt:auto;
 mso-pagination:none;
 text-align:left;
 font-family:Calibri;
-mso-fareast-font-family:ËÎÌå;
+mso-fareast-font-family:å®‹ä½“;
 mso-bidi-font-family:'Times New Roman';
 font-size:12.0000pt;
 }
@@ -329,7 +329,7 @@ color:red;
 }
 
 table.MsoNormalTable{
-mso-style-name:ÆÕÍ¨±í¸ñ;
+mso-style-name:æ™®é€šè¡¨æ ¼;
 mso-style-parent:"";
 mso-style-noshow:yes;
 mso-tstyle-rowband-size:0;
@@ -355,12 +355,12 @@ layout-grid:15.6000pt;
 mso-header-margin:42.5500pt;
 mso-footer-margin:49.6000pt;
 }
-div.Section0{page:Section0;}</style></head><body style="tab-interval:21pt;text-justify-trim:punctuation;" ><!--StartFragment--><div class="Section0"  style="layout-grid:15.6000pt;" ><p class=MsoNormal  align=center  style="text-align:center;" ><span style="mso-spacerun:'yes';font-family:·ÂËÎ;font-size:14.0000pt;
-mso-font-kerning:1.0000pt;" ><font face="·ÂËÎ" >¿Õµ÷×¨ÒµÑ§ÉúÎªÍËĞİÀÏ¸É²¿ÇåÏ´¿Õµ÷</font></span><span style="mso-spacerun:'yes';font-family:·ÂËÎ;font-size:14.0000pt;
-mso-font-kerning:1.0000pt;" ><font face="·ÂËÎ" >¡ª¡ª</font></span><span style="mso-spacerun:'yes';font-family:·ÂËÎ;font-size:14.0000pt;
-mso-font-kerning:1.0000pt;" ><font face="·ÂËÎ" >ÄÜÔ´ÓëÖÇÄÜ¹¤³ÌÑ§Ôº</font>¡°ÎÒÎªÊ¦Éú°ìÊµÊÂ¡±ÏîÄ¿¼ò½é</span><span style="mso-spacerun:'yes';font-family:·ÂËÎ;font-size:14.0000pt;
-mso-font-kerning:1.0000pt;" ><o:p></o:p></span></p><p class=MsoNormal  align=justify  style="text-align:justify;text-justify:inter-ideograph;" ><span style="mso-spacerun:'yes';font-family:·ÂËÎ;font-size:14.0000pt;
-mso-font-kerning:1.0000pt;" >&nbsp;&nbsp;&nbsp;<font face="·ÂËÎ" >¾­µ÷ÑĞ£¬Ñ§Ğ£ÍËĞİÀÏ¸É²¿Æ½¾ùÄêÁä½Ï´ó£¬Ò²´æÔÚ²¿·Ö</font>¡°¿Õ³²ÀÏÈË¡±£¬¶Ô×¨ÒµÓ¦¼±·şÎñ·½ÃæÓĞºÜ´óĞèÇó¡£Í¬Ê±£¬ÔÚ³£Ì¬»¯ÒßÇé·À¿ØĞÎÊÆÏÂ£¬±£³ÖÊÒÄÚ¿ÕÆøÇåĞÂÊæÊÊÊÇ½¡¿µÉú»îµÄ±ØÒª±£Ö¤¡£Îª¾«×¼½â¾öÍËĞİÀÏ¸É²¿¼ÒÖĞ¿Õµ÷ÇåÏ´À§ÄÑÎÊÌâ£¬ÄÜÔ´ÓëÖÇÄÜ¹¤³ÌÑ§Ôº¶à´Î×éÖ¯¿Õµ÷×¨ÒµµÄÑ§ÉúÎªÍËĞİÀÏ¸É²¿Ìá¹©ÒåÎñÇåÏ´¿Õµ÷·şÎñ¡£Í¨¹ı³¹µ×ÇåÏ´£¬¿Õµ÷¸É¾»ÈçĞÂ£¬Ê¹ÓÃÆğÀ´Ğ§¹û¸üºÃÁË¡¢Ò²¸üÊ¡µçÁË£¬´ïµ½ÁË½ÚÄÜ¼õÎÛµÄÄ¿µÄ¡£ÍËĞİÀÏ¸É²¿·×·×¿äÔŞÍ¬Ñ§ÃÇÇåÏ´µÃÈÏÕæÏ¸ÖÂ£¬Ò²ÒòÍ¬Ñ§ÃÇÖÜµ½ÄÍĞÄµÄ·şÎñ¸Ğµ½ÎÂÅ¯¡£Í¨¹ıÒåÎñÇåÏ´¿Õµ÷·şÎñÏîÄ¿£¬²»½ö¶ÍÁ¶ÁËÍ¬Ñ§ÃÇ½«×¨ÒµÖªÊ¶¸¶ÖîÊµ¼ùµÄÄÜÁ¦£¬Í¬Ê±Ò²ÅàÑøÁË»ØÀ¡Éç»áµÄ·îÏ×¾«Éñ¡£</span><span style="mso-spacerun:'yes';font-family:·ÂËÎ;font-size:14.0000pt;
-mso-font-kerning:1.0000pt;" ><o:p></o:p></span></p><p class=MsoNormal  align=justify  style="text-align:justify;text-justify:inter-ideograph;" ><span style="mso-spacerun:'yes';font-family:·ÂËÎ;font-size:14.0000pt;
-mso-font-kerning:1.0000pt;" ><o:p>&nbsp;</o:p></span></p><p class=MsoNormal  align=justify  style="text-align:justify;text-justify:inter-ideograph;" ><img width="554"  height="415"  src="20.¿Õµ÷×¨ÒµÑ§ÉúÎªÍËĞİÀÏ¸É²¿ÇåÏ´¿Õµ÷¡ª¡ªÄÜÔ´ÓëÖÇÄÜ¹¤³ÌÑ§Ôº¡°ÎÒÎªÊ¦Éú°ìÊµÊÂ¡±ÏîÄ¿¼ò½é.files/20.¿Õµ÷×¨ÒµÑ§ÉúÎªÍËĞİÀÏ¸É²¿ÇåÏ´¿Õµ÷¡ª¡ªÄÜÔ´ÓëÖÇÄÜ¹¤³ÌÑ§Ôº¡°ÎÒÎªÊ¦Éú°ìÊµÊÂ¡±ÏîÄ¿¼ò½é313.png" ><img width="553"  height="414"  src="20.¿Õµ÷×¨ÒµÑ§ÉúÎªÍËĞİÀÏ¸É²¿ÇåÏ´¿Õµ÷¡ª¡ªÄÜÔ´ÓëÖÇÄÜ¹¤³ÌÑ§Ôº¡°ÎÒÎªÊ¦Éú°ìÊµÊÂ¡±ÏîÄ¿¼ò½é.files/20.¿Õµ÷×¨ÒµÑ§ÉúÎªÍËĞİÀÏ¸É²¿ÇåÏ´¿Õµ÷¡ª¡ªÄÜÔ´ÓëÖÇÄÜ¹¤³ÌÑ§Ôº¡°ÎÒÎªÊ¦Éú°ìÊµÊÂ¡±ÏîÄ¿¼ò½é314.png" ><span style="mso-spacerun:'yes';font-family:·ÂËÎ;font-size:14.0000pt;
+div.Section0{page:Section0;}</style></head><body style="tab-interval:21pt;text-justify-trim:punctuation;" ><!--StartFragment--><div class="Section0"  style="layout-grid:15.6000pt;" ><p class=MsoNormal  align=center  style="text-align:center;" ><span style="mso-spacerun:'yes';font-family:ä»¿å®‹;font-size:14.0000pt;
+mso-font-kerning:1.0000pt;" ><font face="ä»¿å®‹" >ç©ºè°ƒä¸“ä¸šå­¦ç”Ÿä¸ºé€€ä¼‘è€å¹²éƒ¨æ¸…æ´—ç©ºè°ƒ</font></span><span style="mso-spacerun:'yes';font-family:ä»¿å®‹;font-size:14.0000pt;
+mso-font-kerning:1.0000pt;" ><font face="ä»¿å®‹" >â€”â€”</font></span><span style="mso-spacerun:'yes';font-family:ä»¿å®‹;font-size:14.0000pt;
+mso-font-kerning:1.0000pt;" ><font face="ä»¿å®‹" >èƒ½æºä¸æ™ºèƒ½å·¥ç¨‹å­¦é™¢</font>â€œæˆ‘ä¸ºå¸ˆç”ŸåŠå®äº‹â€é¡¹ç›®ç®€ä»‹</span><span style="mso-spacerun:'yes';font-family:ä»¿å®‹;font-size:14.0000pt;
+mso-font-kerning:1.0000pt;" ><o:p></o:p></span></p><p class=MsoNormal  align=justify  style="text-align:justify;text-justify:inter-ideograph;" ><span style="mso-spacerun:'yes';font-family:ä»¿å®‹;font-size:14.0000pt;
+mso-font-kerning:1.0000pt;" >&nbsp;&nbsp;&nbsp;<font face="ä»¿å®‹" >ç»è°ƒç ”ï¼Œå­¦æ ¡é€€ä¼‘è€å¹²éƒ¨å¹³å‡å¹´é¾„è¾ƒå¤§ï¼Œä¹Ÿå­˜åœ¨éƒ¨åˆ†</font>â€œç©ºå·¢è€äººâ€ï¼Œå¯¹ä¸“ä¸šåº”æ€¥æœåŠ¡æ–¹é¢æœ‰å¾ˆå¤§éœ€æ±‚ã€‚åŒæ—¶ï¼Œåœ¨å¸¸æ€åŒ–ç–«æƒ…é˜²æ§å½¢åŠ¿ä¸‹ï¼Œä¿æŒå®¤å†…ç©ºæ°”æ¸…æ–°èˆ’é€‚æ˜¯å¥åº·ç”Ÿæ´»çš„å¿…è¦ä¿è¯ã€‚ä¸ºç²¾å‡†è§£å†³é€€ä¼‘è€å¹²éƒ¨å®¶ä¸­ç©ºè°ƒæ¸…æ´—å›°éš¾é—®é¢˜ï¼Œèƒ½æºä¸æ™ºèƒ½å·¥ç¨‹å­¦é™¢å¤šæ¬¡ç»„ç»‡ç©ºè°ƒä¸“ä¸šçš„å­¦ç”Ÿä¸ºé€€ä¼‘è€å¹²éƒ¨æä¾›ä¹‰åŠ¡æ¸…æ´—ç©ºè°ƒæœåŠ¡ã€‚é€šè¿‡å½»åº•æ¸…æ´—ï¼Œç©ºè°ƒå¹²å‡€å¦‚æ–°ï¼Œä½¿ç”¨èµ·æ¥æ•ˆæœæ›´å¥½äº†ã€ä¹Ÿæ›´çœç”µäº†ï¼Œè¾¾åˆ°äº†èŠ‚èƒ½å‡æ±¡çš„ç›®çš„ã€‚é€€ä¼‘è€å¹²éƒ¨çº·çº·å¤¸èµåŒå­¦ä»¬æ¸…æ´—å¾—è®¤çœŸç»†è‡´ï¼Œä¹Ÿå› åŒå­¦ä»¬å‘¨åˆ°è€å¿ƒçš„æœåŠ¡æ„Ÿåˆ°æ¸©æš–ã€‚é€šè¿‡ä¹‰åŠ¡æ¸…æ´—ç©ºè°ƒæœåŠ¡é¡¹ç›®ï¼Œä¸ä»…é”»ç‚¼äº†åŒå­¦ä»¬å°†ä¸“ä¸šçŸ¥è¯†ä»˜è¯¸å®è·µçš„èƒ½åŠ›ï¼ŒåŒæ—¶ä¹ŸåŸ¹å…»äº†å›é¦ˆç¤¾ä¼šçš„å¥‰çŒ®ç²¾ç¥ã€‚</span><span style="mso-spacerun:'yes';font-family:ä»¿å®‹;font-size:14.0000pt;
+mso-font-kerning:1.0000pt;" ><o:p></o:p></span></p><p class=MsoNormal  align=justify  style="text-align:justify;text-justify:inter-ideograph;" ><span style="mso-spacerun:'yes';font-family:ä»¿å®‹;font-size:14.0000pt;
+mso-font-kerning:1.0000pt;" ><o:p>&nbsp;</o:p></span></p><p class=MsoNormal  align=justify  style="text-align:justify;text-justify:inter-ideograph;" ><img width="554"  height="415"  src="20.ç©ºè°ƒä¸“ä¸šå­¦ç”Ÿä¸ºé€€ä¼‘è€å¹²éƒ¨æ¸…æ´—ç©ºè°ƒâ€”â€”èƒ½æºä¸æ™ºèƒ½å·¥ç¨‹å­¦é™¢â€œæˆ‘ä¸ºå¸ˆç”ŸåŠå®äº‹â€é¡¹ç›®ç®€ä»‹.files/20.ç©ºè°ƒä¸“ä¸šå­¦ç”Ÿä¸ºé€€ä¼‘è€å¹²éƒ¨æ¸…æ´—ç©ºè°ƒâ€”â€”èƒ½æºä¸æ™ºèƒ½å·¥ç¨‹å­¦é™¢â€œæˆ‘ä¸ºå¸ˆç”ŸåŠå®äº‹â€é¡¹ç›®ç®€ä»‹313.png" ><img width="553"  height="414"  src="20.ç©ºè°ƒä¸“ä¸šå­¦ç”Ÿä¸ºé€€ä¼‘è€å¹²éƒ¨æ¸…æ´—ç©ºè°ƒâ€”â€”èƒ½æºä¸æ™ºèƒ½å·¥ç¨‹å­¦é™¢â€œæˆ‘ä¸ºå¸ˆç”ŸåŠå®äº‹â€é¡¹ç›®ç®€ä»‹.files/20.ç©ºè°ƒä¸“ä¸šå­¦ç”Ÿä¸ºé€€ä¼‘è€å¹²éƒ¨æ¸…æ´—ç©ºè°ƒâ€”â€”èƒ½æºä¸æ™ºèƒ½å·¥ç¨‹å­¦é™¢â€œæˆ‘ä¸ºå¸ˆç”ŸåŠå®äº‹â€é¡¹ç›®ç®€ä»‹314.png" ><span style="mso-spacerun:'yes';font-family:ä»¿å®‹;font-size:14.0000pt;
 mso-font-kerning:1.0000pt;" ><o:p>&nbsp;</o:p></span></p></div><!--EndFragment--></body></html>
