--- a/formatPages/7.卫生下乡助力乡村振兴.html
+++ b/formatPages/7.卫生下乡助力乡村振兴.html
@@ -1,5 +1,5 @@
 
-<html xmlns:o="urn:schemas-microsoft-com:office:office" xmlns:w="urn:schemas-microsoft-com:office:word" xmlns:dt="uuid:C2F41010-65B3-11d1-A29F-00AA00C14882" xmlns="http://www.w3.org/TR/REC-html40"><head><meta http-equiv=Content-Type  content="text/html; charset=gb2312" ><meta name=ProgId  content=Word.Document ><meta name=Generator  content="Microsoft Word 14" ><meta name=Originator  content="Microsoft Word 14" ><title></title><!--[if gte mso 9]><xml><o:DocumentProperties><o:Author>xb21cn</o:Author><o:LastAuthor>Ö½É¡ÏÂµÄÑÌÓê</o:LastAuthor><o:Revision>1</o:Revision><o:Pages>2</o:Pages><o:Characters>242</o:Characters><o:Lines>2</o:Lines><o:Paragraphs>1</o:Paragraphs></o:DocumentProperties><o:CustomDocumentProperties><o:KSOProductBuildVer dt:dt="string" >2052-11.1.0.11194</o:KSOProductBuildVer><o:ICV dt:dt="string" >B1A61FD8BC7A42979D3F59C75C507899</o:ICV></o:CustomDocumentProperties></xml><![endif]--><!--[if gte mso 9]><xml><o:OfficeDocumentSettings></o:OfficeDocumentSettings></xml><![endif]--><!--[if gte mso 9]><xml><w:WordDocument><w:BrowserLevel>MicrosoftInternetExplorer4</w:BrowserLevel><w:DisplayHorizontalDrawingGridEvery>0</w:DisplayHorizontalDrawingGridEvery><w:DisplayVerticalDrawingGridEvery>2</w:DisplayVerticalDrawingGridEvery><w:DocumentKind>DocumentNotSpecified</w:DocumentKind><w:DrawingGridVerticalSpacing>7.8 °õ</w:DrawingGridVerticalSpacing><w:PunctuationKerning></w:PunctuationKerning><w:View>Web</w:View><w:Compatibility><w:AdjustLineHeightInTable/><w:DontGrowAutofit/><w:BalanceSingleByteDoubleByteWidth/><w:DoNotExpandShiftReturn/><w:UseFELayout/></w:Compatibility><w:Zoom>0</w:Zoom></w:WordDocument></xml><![endif]--><!--[if gte mso 9]><xml><w:LatentStyles DefLockedState="false"  DefUnhideWhenUsed="true"  DefSemiHidden="true"  DefQFormat="false"  DefPriority="99"  LatentStyleCount="260" >
+<html xmlns:o="urn:schemas-microsoft-com:office:office" xmlns:w="urn:schemas-microsoft-com:office:word" xmlns:dt="uuid:C2F41010-65B3-11d1-A29F-00AA00C14882" xmlns="http://www.w3.org/TR/REC-html40"><head><meta http-equiv=Content-Type  content="text/html; charset=utf8" ><meta name=ProgId  content=Word.Document ><meta name=Generator  content="Microsoft Word 14" ><meta name=Originator  content="Microsoft Word 14" ><title></title><!--[if gte mso 9]><xml><o:DocumentProperties><o:Author>xb21cn</o:Author><o:LastAuthor>çº¸ä¼ä¸‹çš„çƒŸé›¨</o:LastAuthor><o:Revision>1</o:Revision><o:Pages>2</o:Pages><o:Characters>242</o:Characters><o:Lines>2</o:Lines><o:Paragraphs>1</o:Paragraphs></o:DocumentProperties><o:CustomDocumentProperties><o:KSOProductBuildVer dt:dt="string" >2052-11.1.0.11194</o:KSOProductBuildVer><o:ICV dt:dt="string" >B1A61FD8BC7A42979D3F59C75C507899</o:ICV></o:CustomDocumentProperties></xml><![endif]--><!--[if gte mso 9]><xml><o:OfficeDocumentSettings></o:OfficeDocumentSettings></xml><![endif]--><!--[if gte mso 9]><xml><w:WordDocument><w:BrowserLevel>MicrosoftInternetExplorer4</w:BrowserLevel><w:DisplayHorizontalDrawingGridEvery>0</w:DisplayHorizontalDrawingGridEvery><w:DisplayVerticalDrawingGridEvery>2</w:DisplayVerticalDrawingGridEvery><w:DocumentKind>DocumentNotSpecified</w:DocumentKind><w:DrawingGridVerticalSpacing>7.8 ç£…</w:DrawingGridVerticalSpacing><w:PunctuationKerning></w:PunctuationKerning><w:View>Web</w:View><w:Compatibility><w:AdjustLineHeightInTable/><w:DontGrowAutofit/><w:BalanceSingleByteDoubleByteWidth/><w:DoNotExpandShiftReturn/><w:UseFELayout/></w:Compatibility><w:Zoom>0</w:Zoom></w:WordDocument></xml><![endif]--><!--[if gte mso 9]><xml><w:LatentStyles DefLockedState="false"  DefUnhideWhenUsed="true"  DefSemiHidden="true"  DefQFormat="false"  DefPriority="99"  LatentStyleCount="260" >
     <w:LsdException Locked="false"  Priority="0"  SemiHidden="false"  UnhideWhenUsed="false"  QFormat="true"  Name="Normal" ></w:LsdException>
 <w:LsdException Locked="false"  Priority="9"  SemiHidden="false"  UnhideWhenUsed="false"  QFormat="true"  Name="heading 1" ></w:LsdException>
 <w:LsdException Locked="false"  Priority="9"  SemiHidden="false"  QFormat="true"  Name="heading 2" ></w:LsdException>
@@ -263,7 +263,7 @@ font-family:"Times New Roman";
 }
 
 @font-face{
-font-family:"ËÎÌå";
+font-family:"å®‹ä½“";
 }
 
 @font-face{
@@ -275,7 +275,7 @@ font-family:"Wingdings";
 }
 
 p.MsoNormal{
-mso-style-name:ÕıÎÄ;
+mso-style-name:æ­£æ–‡;
 mso-style-parent:"";
 margin:0pt;
 margin-bottom:.0001pt;
@@ -283,7 +283,7 @@ mso-pagination:none;
 text-align:justify;
 text-justify:inter-ideograph;
 font-family:Calibri;
-mso-fareast-font-family:ËÎÌå;
+mso-fareast-font-family:å®‹ä½“;
 mso-bidi-font-family:'Times New Roman';
 font-size:10.5000pt;
 mso-font-kerning:1.0000pt;
@@ -299,7 +299,7 @@ font-size:9.0000pt;
 }
 
 p.MsoAcetate{
-mso-style-name:Åú×¢¿òÎÄ±¾;
+mso-style-name:æ‰¹æ³¨æ¡†æ–‡æœ¬;
 mso-style-noshow:yes;
 margin:0pt;
 margin-bottom:.0001pt;
@@ -307,7 +307,7 @@ mso-pagination:none;
 text-align:justify;
 text-justify:inter-ideograph;
 font-family:Calibri;
-mso-fareast-font-family:ËÎÌå;
+mso-fareast-font-family:å®‹ä½“;
 mso-bidi-font-family:'Times New Roman';
 font-size:9.0000pt;
 mso-font-kerning:1.0000pt;
@@ -329,7 +329,7 @@ color:red;
 }
 
 table.MsoNormalTable{
-mso-style-name:ÆÕÍ¨±í¸ñ;
+mso-style-name:æ™®é€šè¡¨æ ¼;
 mso-style-parent:"";
 mso-style-noshow:yes;
 mso-tstyle-rowband-size:0;
@@ -355,20 +355,20 @@ layout-grid:15.6000pt;
 mso-header-margin:42.5500pt;
 mso-footer-margin:49.6000pt;
 }
-div.Section0{page:Section0;}</style></head><body style="tab-interval:21pt;text-justify-trim:punctuation;" ><!--StartFragment--><div class="Section0"  style="layout-grid:15.6000pt;" ><p class=MsoNormal  align=center  style="text-align:center;" ><span style="mso-spacerun:'yes';font-family:ËÎÌå;mso-ascii-font-family:Calibri;
+div.Section0{page:Section0;}</style></head><body style="tab-interval:21pt;text-justify-trim:punctuation;" ><!--StartFragment--><div class="Section0"  style="layout-grid:15.6000pt;" ><p class=MsoNormal  align=center  style="text-align:center;" ><span style="mso-spacerun:'yes';font-family:å®‹ä½“;mso-ascii-font-family:Calibri;
 mso-hansi-font-family:Calibri;mso-bidi-font-family:'Times New Roman';font-size:14.0000pt;
-mso-font-kerning:1.0000pt;" ><font face="ËÎÌå" >Ñ§µ³Ê·¼ûĞĞ¶¯</font> &nbsp;Ï×ÒåÕïÖúÍÑÆ¶</span><span style="mso-spacerun:'yes';font-family:ËÎÌå;mso-ascii-font-family:Calibri;
+mso-font-kerning:1.0000pt;" ><font face="å®‹ä½“" >å­¦å…šå²è§è¡ŒåŠ¨</font> &nbsp;çŒ®ä¹‰è¯ŠåŠ©è„±è´«</span><span style="mso-spacerun:'yes';font-family:å®‹ä½“;mso-ascii-font-family:Calibri;
 mso-hansi-font-family:Calibri;mso-bidi-font-family:'Times New Roman';font-size:14.0000pt;
-mso-font-kerning:1.0000pt;" ><o:p></o:p></span></p><p class=MsoNormal  style="text-indent:28.0000pt;mso-char-indent-count:2.0000;" ><span style="mso-spacerun:'yes';font-family:ËÎÌå;mso-ascii-font-family:Calibri;
+mso-font-kerning:1.0000pt;" ><o:p></o:p></span></p><p class=MsoNormal  style="text-indent:28.0000pt;mso-char-indent-count:2.0000;" ><span style="mso-spacerun:'yes';font-family:å®‹ä½“;mso-ascii-font-family:Calibri;
 mso-hansi-font-family:Calibri;mso-bidi-font-family:'Times New Roman';font-size:14.0000pt;
-mso-font-kerning:1.0000pt;" ><font face="ËÎÌå" >Ğ£Ò½Ôºµ³Ô±ÀîÃ÷ÏşÍ¬Ö¾ÔÚµ³Ê·Ñ§Ï°½ÌÓı»î¶¯ÖĞ³ä·ÖÀûÓÃ×¨ÒµÌØ³¤£¬¼á³ÖÒåÕïÏÂÏç£¬ÖúÁ¦Å©»§ÍÑÆ¶¡£×Ô</font><font face="Calibri" >2020</font><font face="ËÎÌå" >Äê</font><font face="Calibri" >9</font><font face="ËÎÌå" >ÔÂÒÔÀ´£¬ÔÚÒ½ÔºÁìµ¼µÄÖ§³ÖÏÂËûÀûÓÃÖÜÄ©Ê±¼äÏÈºó</font><font face="Calibri" >15</font><font face="ËÎÌå" >´Îµ½ĞÂ²ÌÏØ¿ªÕ¹ÒåÕï»î¶¯£¬×ã¼£×ß±éĞÂ²ÌÏØ¾Å¸öÏçÕòÊ®¶à¸öĞĞÕş´å£¬·şÎñÈºÖÚ</font><font face="Calibri" >1800</font><font face="ËÎÌå" >¶àÃû¡£ËûµÄÎñÊµ·îÏ×¾«ÉñºÍ¾«Õ¿Ò½ÊõµÃµ½ÁËµ±µØ¸÷¼¶Áìµ¼ºÍ¹ã´óÈºÖÚµÄ¸ß¶ÈÈÏ¿É£¬</font></span><span style="mso-spacerun:'yes';font-family:ËÎÌå;mso-ascii-font-family:Calibri;
+mso-font-kerning:1.0000pt;" ><font face="å®‹ä½“" >æ ¡åŒ»é™¢å…šå‘˜ææ˜æ™“åŒå¿—åœ¨å…šå²å­¦ä¹ æ•™è‚²æ´»åŠ¨ä¸­å……åˆ†åˆ©ç”¨ä¸“ä¸šç‰¹é•¿ï¼ŒåšæŒä¹‰è¯Šä¸‹ä¹¡ï¼ŒåŠ©åŠ›å†œæˆ·è„±è´«ã€‚è‡ª</font><font face="Calibri" >2020</font><font face="å®‹ä½“" >å¹´</font><font face="Calibri" >9</font><font face="å®‹ä½“" >æœˆä»¥æ¥ï¼Œåœ¨åŒ»é™¢é¢†å¯¼çš„æ”¯æŒä¸‹ä»–åˆ©ç”¨å‘¨æœ«æ—¶é—´å…ˆå</font><font face="Calibri" >15</font><font face="å®‹ä½“" >æ¬¡åˆ°æ–°è”¡å¿å¼€å±•ä¹‰è¯Šæ´»åŠ¨ï¼Œè¶³è¿¹èµ°éæ–°è”¡å¿ä¹ä¸ªä¹¡é•‡åå¤šä¸ªè¡Œæ”¿æ‘ï¼ŒæœåŠ¡ç¾¤ä¼—</font><font face="Calibri" >1800</font><font face="å®‹ä½“" >å¤šåã€‚ä»–çš„åŠ¡å®å¥‰çŒ®ç²¾ç¥å’Œç²¾æ¹›åŒ»æœ¯å¾—åˆ°äº†å½“åœ°å„çº§é¢†å¯¼å’Œå¹¿å¤§ç¾¤ä¼—çš„é«˜åº¦è®¤å¯ï¼Œ</font></span><span style="mso-spacerun:'yes';font-family:å®‹ä½“;mso-ascii-font-family:Calibri;
 mso-hansi-font-family:Calibri;mso-bidi-font-family:'Times New Roman';font-size:14.0000pt;
-mso-font-kerning:1.0000pt;" ><font face="ËÎÌå" >ĞÂ²ÌÏØÎ¯ÏØÕş¸®ÌØµØÖÂĞÅÎÒĞ£±íÊ¾¸ĞĞ»¡£</font></span><span style="mso-spacerun:'yes';font-family:ËÎÌå;mso-ascii-font-family:Calibri;
+mso-font-kerning:1.0000pt;" ><font face="å®‹ä½“" >æ–°è”¡å¿å§”å¿æ”¿åºœç‰¹åœ°è‡´ä¿¡æˆ‘æ ¡è¡¨ç¤ºæ„Ÿè°¢ã€‚</font></span><span style="mso-spacerun:'yes';font-family:å®‹ä½“;mso-ascii-font-family:Calibri;
 mso-hansi-font-family:Calibri;mso-bidi-font-family:'Times New Roman';font-size:14.0000pt;
-mso-font-kerning:1.0000pt;" ><font face="ËÎÌå" >ËûµÄÊÂ¼£ÏÈºó±»ºÓÄÏÎÀÊÓ¡¢ºÓÄÏ¹«¹²ÆµµÀ¡¢´óºÓ±¨¡¢ÖĞ¹úÍø¡¢Ó³ÏóÍø¡¢ËÑºüÍø¡¢×¤ÂíµêÈÕ±¨µÈÊ®¶à¼ÒÃ½ÌåĞû´«±¨µÀ¡£´ËÍâ£¬Ëû»¹Â¼ÖÆÁË</font>¡°ÖĞÒ½Ğ¡ÃîÕĞ¡±ÊÓÆµ£¬Ğû½²ÖĞÒ½Ò©½¡¿µÖªÊ¶£¬Òò²Ù×÷¼ò±ãÓĞĞ§£¬ÉîÊÜÈºÖÚ»¶Ó­£¬Æä×÷Æ·ÏÈºó<font face="Calibri" >16</font><font face="ËÎÌå" >´Î±»Ñ§Ï°Ç¿¹úºÓÄÏÑ§Ï°Æ½Ì¨²ÉÓÃ¡£</font></span><span style="mso-spacerun:'yes';font-family:ËÎÌå;mso-ascii-font-family:Calibri;
+mso-font-kerning:1.0000pt;" ><font face="å®‹ä½“" >ä»–çš„äº‹è¿¹å…ˆåè¢«æ²³å—å«è§†ã€æ²³å—å…¬å…±é¢‘é“ã€å¤§æ²³æŠ¥ã€ä¸­å›½ç½‘ã€æ˜ è±¡ç½‘ã€æœç‹ç½‘ã€é©»é©¬åº—æ—¥æŠ¥ç­‰åå¤šå®¶åª’ä½“å®£ä¼ æŠ¥é“ã€‚æ­¤å¤–ï¼Œä»–è¿˜å½•åˆ¶äº†</font>â€œä¸­åŒ»å°å¦™æ‹›â€è§†é¢‘ï¼Œå®£è®²ä¸­åŒ»è¯å¥åº·çŸ¥è¯†ï¼Œå› æ“ä½œç®€ä¾¿æœ‰æ•ˆï¼Œæ·±å—ç¾¤ä¼—æ¬¢è¿ï¼Œå…¶ä½œå“å…ˆå<font face="Calibri" >16</font><font face="å®‹ä½“" >æ¬¡è¢«å­¦ä¹ å¼ºå›½æ²³å—å­¦ä¹ å¹³å°é‡‡ç”¨ã€‚</font></span><span style="mso-spacerun:'yes';font-family:å®‹ä½“;mso-ascii-font-family:Calibri;
 mso-hansi-font-family:Calibri;mso-bidi-font-family:'Times New Roman';font-size:14.0000pt;
-mso-font-kerning:1.0000pt;" ><o:p></o:p></span></p><p class=MsoNormal  style="text-indent:28.0000pt;mso-char-indent-count:2.0000;" ><span style="mso-spacerun:'yes';font-family:ËÎÌå;mso-ascii-font-family:Calibri;
+mso-font-kerning:1.0000pt;" ><o:p></o:p></span></p><p class=MsoNormal  style="text-indent:28.0000pt;mso-char-indent-count:2.0000;" ><span style="mso-spacerun:'yes';font-family:å®‹ä½“;mso-ascii-font-family:Calibri;
 mso-hansi-font-family:Calibri;mso-bidi-font-family:'Times New Roman';font-size:14.0000pt;
-mso-font-kerning:1.0000pt;" ><o:p>&nbsp;</o:p></span></p><p class=MsoNormal  style="text-indent:28.0000pt;mso-char-indent-count:2.0000;" ><img width="488"  height="366"  src="7.ÎÀÉúÏÂÏçÖúÁ¦Ïç´åÕñĞË.files/7.ÎÀÉúÏÂÏçÖúÁ¦Ïç´åÕñĞË299.png" ><span style="mso-spacerun:'yes';font-family:Calibri;mso-fareast-font-family:ËÎÌå;
-mso-bidi-font-family:'Times New Roman';font-size:14.0000pt;mso-font-kerning:1.0000pt;" ><o:p>&nbsp;</o:p></span></p><p class=MsoNormal  style="text-indent:28.0000pt;mso-char-indent-count:2.0000;" ><img width="513"  height="359"  src="7.ÎÀÉúÏÂÏçÖúÁ¦Ïç´åÕñĞË.files/7.ÎÀÉúÏÂÏçÖúÁ¦Ïç´åÕñĞË301.png"  align="left"  hspace="12" ><span style="mso-spacerun:'yes';font-family:Calibri;mso-fareast-font-family:ËÎÌå;
+mso-font-kerning:1.0000pt;" ><o:p>&nbsp;</o:p></span></p><p class=MsoNormal  style="text-indent:28.0000pt;mso-char-indent-count:2.0000;" ><img width="488"  height="366"  src="7.å«ç”Ÿä¸‹ä¹¡åŠ©åŠ›ä¹¡æ‘æŒ¯å…´.files/7.å«ç”Ÿä¸‹ä¹¡åŠ©åŠ›ä¹¡æ‘æŒ¯å…´299.png" ><span style="mso-spacerun:'yes';font-family:Calibri;mso-fareast-font-family:å®‹ä½“;
+mso-bidi-font-family:'Times New Roman';font-size:14.0000pt;mso-font-kerning:1.0000pt;" ><o:p>&nbsp;</o:p></span></p><p class=MsoNormal  style="text-indent:28.0000pt;mso-char-indent-count:2.0000;" ><img width="513"  height="359"  src="7.å«ç”Ÿä¸‹ä¹¡åŠ©åŠ›ä¹¡æ‘æŒ¯å…´.files/7.å«ç”Ÿä¸‹ä¹¡åŠ©åŠ›ä¹¡æ‘æŒ¯å…´301.png"  align="left"  hspace="12" ><span style="mso-spacerun:'yes';font-family:Calibri;mso-fareast-font-family:å®‹ä½“;
 mso-bidi-font-family:'Times New Roman';font-size:14.0000pt;mso-font-kerning:1.0000pt;" ><o:p>&nbsp;</o:p></span></p></div><!--EndFragment--></body></html>
