--- a/formatPages/9.永远跟党走周末文化广场.html
+++ b/formatPages/9.永远跟党走周末文化广场.html
@@ -1,5 +1,5 @@
 
-<html xmlns:o="urn:schemas-microsoft-com:office:office" xmlns:w="urn:schemas-microsoft-com:office:word" xmlns:dt="uuid:C2F41010-65B3-11d1-A29F-00AA00C14882" xmlns="http://www.w3.org/TR/REC-html40"><head><meta http-equiv=Content-Type  content="text/html; charset=gb2312" ><meta name=ProgId  content=Word.Document ><meta name=Generator  content="Microsoft Word 14" ><meta name=Originator  content="Microsoft Word 14" ><title></title><!--[if gte mso 9]><xml><o:DocumentProperties><o:Author>admin</o:Author><o:LastAuthor>Ö½É¡ÏÂµÄÑÌÓê</o:LastAuthor><o:Revision>1</o:Revision><o:Pages>1</o:Pages></o:DocumentProperties><o:CustomDocumentProperties><o:KSOProductBuildVer dt:dt="string" >2052-11.1.0.11194</o:KSOProductBuildVer><o:ICV dt:dt="string" >DDE8930BB2C24EB7BF53853EA2072789</o:ICV></o:CustomDocumentProperties></xml><![endif]--><!--[if gte mso 9]><xml><o:OfficeDocumentSettings></o:OfficeDocumentSettings></xml><![endif]--><!--[if gte mso 9]><xml><w:WordDocument><w:BrowserLevel>MicrosoftInternetExplorer4</w:BrowserLevel><w:DisplayHorizontalDrawingGridEvery>0</w:DisplayHorizontalDrawingGridEvery><w:DisplayVerticalDrawingGridEvery>2</w:DisplayVerticalDrawingGridEvery><w:DocumentKind>DocumentNotSpecified</w:DocumentKind><w:DrawingGridVerticalSpacing>7.8 °õ</w:DrawingGridVerticalSpacing><w:PunctuationKerning></w:PunctuationKerning><w:View>Web</w:View><w:Compatibility><w:AdjustLineHeightInTable/><w:DontGrowAutofit/><w:BalanceSingleByteDoubleByteWidth/><w:DoNotExpandShiftReturn/><w:UseFELayout/></w:Compatibility><w:Zoom>0</w:Zoom></w:WordDocument></xml><![endif]--><!--[if gte mso 9]><xml><w:LatentStyles DefLockedState="false"  DefUnhideWhenUsed="true"  DefSemiHidden="true"  DefQFormat="false"  DefPriority="99"  LatentStyleCount="260" >
+<html xmlns:o="urn:schemas-microsoft-com:office:office" xmlns:w="urn:schemas-microsoft-com:office:word" xmlns:dt="uuid:C2F41010-65B3-11d1-A29F-00AA00C14882" xmlns="http://www.w3.org/TR/REC-html40"><head><meta http-equiv=Content-Type  content="text/html; charset=utf8" ><meta name=ProgId  content=Word.Document ><meta name=Generator  content="Microsoft Word 14" ><meta name=Originator  content="Microsoft Word 14" ><title></title><!--[if gte mso 9]><xml><o:DocumentProperties><o:Author>admin</o:Author><o:LastAuthor>çº¸ä¼ä¸‹çš„çƒŸé›¨</o:LastAuthor><o:Revision>1</o:Revision><o:Pages>1</o:Pages></o:DocumentProperties><o:CustomDocumentProperties><o:KSOProductBuildVer dt:dt="string" >2052-11.1.0.11194</o:KSOProductBuildVer><o:ICV dt:dt="string" >DDE8930BB2C24EB7BF53853EA2072789</o:ICV></o:CustomDocumentProperties></xml><![endif]--><!--[if gte mso 9]><xml><o:OfficeDocumentSettings></o:OfficeDocumentSettings></xml><![endif]--><!--[if gte mso 9]><xml><w:WordDocument><w:BrowserLevel>MicrosoftInternetExplorer4</w:BrowserLevel><w:DisplayHorizontalDrawingGridEvery>0</w:DisplayHorizontalDrawingGridEvery><w:DisplayVerticalDrawingGridEvery>2</w:DisplayVerticalDrawingGridEvery><w:DocumentKind>DocumentNotSpecified</w:DocumentKind><w:DrawingGridVerticalSpacing>7.8 ç£…</w:DrawingGridVerticalSpacing><w:PunctuationKerning></w:PunctuationKerning><w:View>Web</w:View><w:Compatibility><w:AdjustLineHeightInTable/><w:DontGrowAutofit/><w:BalanceSingleByteDoubleByteWidth/><w:DoNotExpandShiftReturn/><w:UseFELayout/></w:Compatibility><w:Zoom>0</w:Zoom></w:WordDocument></xml><![endif]--><!--[if gte mso 9]><xml><w:LatentStyles DefLockedState="false"  DefUnhideWhenUsed="true"  DefSemiHidden="true"  DefQFormat="false"  DefPriority="99"  LatentStyleCount="260" >
     <w:LsdException Locked="false"  Priority="0"  SemiHidden="false"  UnhideWhenUsed="false"  QFormat="true"  Name="Normal" ></w:LsdException>
 <w:LsdException Locked="false"  Priority="0"  SemiHidden="false"  UnhideWhenUsed="false"  QFormat="true"  Name="heading 1" ></w:LsdException>
 <w:LsdException Locked="false"  Priority="0"  SemiHidden="false"  QFormat="true"  Name="heading 2" ></w:LsdException>
@@ -263,7 +263,7 @@ font-family:"Times New Roman";
 }
 
 @font-face{
-font-family:"ËÎÌå";
+font-family:"å®‹ä½“";
 }
 
 @font-face{
@@ -275,7 +275,7 @@ font-family:"Wingdings";
 }
 
 p.MsoNormal{
-mso-style-name:ÕıÎÄ;
+mso-style-name:æ­£æ–‡;
 mso-style-parent:"";
 margin:0pt;
 margin-bottom:.0001pt;
@@ -283,7 +283,7 @@ mso-pagination:none;
 text-align:justify;
 text-justify:inter-ideograph;
 font-family:Calibri;
-mso-fareast-font-family:ËÎÌå;
+mso-fareast-font-family:å®‹ä½“;
 mso-bidi-font-family:'Times New Roman';
 font-size:10.5000pt;
 mso-font-kerning:1.0000pt;
@@ -309,7 +309,7 @@ color:red;
 }
 
 table.MsoNormalTable{
-mso-style-name:ÆÕÍ¨±í¸ñ;
+mso-style-name:æ™®é€šè¡¨æ ¼;
 mso-style-parent:"";
 mso-style-noshow:yes;
 mso-tstyle-rowband-size:0;
@@ -335,10 +335,10 @@ layout-grid:15.6000pt;
 mso-header-margin:42.5500pt;
 mso-footer-margin:49.6000pt;
 }
-div.Section0{page:Section0;}</style></head><body style="tab-interval:21pt;text-justify-trim:punctuation;" ><!--StartFragment--><div class="Section0"  style="layout-grid:15.6000pt;" ><p class=MsoNormal ><span style="mso-spacerun:'yes';font-family:ËÎÌå;mso-ascii-font-family:Calibri;
+div.Section0{page:Section0;}</style></head><body style="tab-interval:21pt;text-justify-trim:punctuation;" ><!--StartFragment--><div class="Section0"  style="layout-grid:15.6000pt;" ><p class=MsoNormal ><span style="mso-spacerun:'yes';font-family:å®‹ä½“;mso-ascii-font-family:Calibri;
 mso-hansi-font-family:Calibri;mso-bidi-font-family:'Times New Roman';font-size:10.5000pt;
-mso-font-kerning:1.0000pt;" ><font face="ËÎÌå" >¡°´óÑ§ÉúÖÜÄ©ÎÄ»¯¹ã³¡¡±ÊÇĞ£ÍÅÎ¯Îª»îÔ¾Ê¦ÉúÎÄ»¯Éú»îÖØµã´òÔìµÄĞ£Ô°ÎÄ»¯Æ·ÅÆÏîÄ¿£¬</font><font face="Calibri" >2021</font><font face="ËÎÌå" >ÄêÒÔ¡°Ñ§µ³Ê·¡¢Ç¿ĞÅÄî¡¢¸úµ³×ß¡±ÎªÖ÷Ìâ£¬½áºÏÇàÄêÌØµã£¬Ìù½üÇàÄêÉú»î£¬·¢»ÓÇàÄê²ÅÒÕ£¬Ğ£ÍÅÎ¯×éÖ¯¿ªÕ¹ÁËÏµÁĞ¡°ÓÀÔ¶¸úµ³×ß¡±Ğ£Ô°ÎÄ»¯»î¶¯£º¡°ÖÜÄ©µ³Ê·ÓÎÔ°»á¡±¡¢¡°ÖÜÄ©ÎÄÒÕÍí»á¡±¡¢¡°ÖÜÄ©Îè»á¡±¡¢¡°ÖÜÄ©</font><font face="Calibri" >k </font><font face="ËÎÌå" >¸è»á¡±¡¢¡°ÖÜÄ©ÀñÒÇĞã¡±µÈ»î¶¯£¬³ä·Ö·¢»ÓÎÄ»¯»î¶¯µÄÎüÒıÁ¦¡¢Ç×ºÍÁ¦£¬½«ÀíÏëĞÅÄî½ÌÓıÈÚÈë»î¶¯Ê¼ÖÕ£¬½«´óÑ§ÉúÎÄ»¯ËØÖÊ½ÌÓıÓëË¼ÏëÕşÖÎ½ÌÓıÏà½áºÏ£¬ÓĞĞ§ÒıÁìÇàÄê¡¢Äı¾ÛÇàÄê£¬´Ù½øÎÒĞ£ÇàÄêÈ«Ãæ³É³¤£¬ÓªÔìÁË½¡¿µÏòÉÏµÄĞ£Ô°ÎÄ»¯¡£</font></span><span style="mso-spacerun:'yes';font-family:ËÎÌå;mso-ascii-font-family:Calibri;
+mso-font-kerning:1.0000pt;" ><font face="å®‹ä½“" >â€œå¤§å­¦ç”Ÿå‘¨æœ«æ–‡åŒ–å¹¿åœºâ€æ˜¯æ ¡å›¢å§”ä¸ºæ´»è·ƒå¸ˆç”Ÿæ–‡åŒ–ç”Ÿæ´»é‡ç‚¹æ‰“é€ çš„æ ¡å›­æ–‡åŒ–å“ç‰Œé¡¹ç›®ï¼Œ</font><font face="Calibri" >2021</font><font face="å®‹ä½“" >å¹´ä»¥â€œå­¦å…šå²ã€å¼ºä¿¡å¿µã€è·Ÿå…šèµ°â€ä¸ºä¸»é¢˜ï¼Œç»“åˆé’å¹´ç‰¹ç‚¹ï¼Œè´´è¿‘é’å¹´ç”Ÿæ´»ï¼Œå‘æŒ¥é’å¹´æ‰è‰ºï¼Œæ ¡å›¢å§”ç»„ç»‡å¼€å±•äº†ç³»åˆ—â€œæ°¸è¿œè·Ÿå…šèµ°â€æ ¡å›­æ–‡åŒ–æ´»åŠ¨ï¼šâ€œå‘¨æœ«å…šå²æ¸¸å›­ä¼šâ€ã€â€œå‘¨æœ«æ–‡è‰ºæ™šä¼šâ€ã€â€œå‘¨æœ«èˆä¼šâ€ã€â€œå‘¨æœ«</font><font face="Calibri" >k </font><font face="å®‹ä½“" >æ­Œä¼šâ€ã€â€œå‘¨æœ«ç¤¼ä»ªç§€â€ç­‰æ´»åŠ¨ï¼Œå……åˆ†å‘æŒ¥æ–‡åŒ–æ´»åŠ¨çš„å¸å¼•åŠ›ã€äº²å’ŒåŠ›ï¼Œå°†ç†æƒ³ä¿¡å¿µæ•™è‚²èå…¥æ´»åŠ¨å§‹ç»ˆï¼Œå°†å¤§å­¦ç”Ÿæ–‡åŒ–ç´ è´¨æ•™è‚²ä¸æ€æƒ³æ”¿æ²»æ•™è‚²ç›¸ç»“åˆï¼Œæœ‰æ•ˆå¼•é¢†é’å¹´ã€å‡èšé’å¹´ï¼Œä¿ƒè¿›æˆ‘æ ¡é’å¹´å…¨é¢æˆé•¿ï¼Œè¥é€ äº†å¥åº·å‘ä¸Šçš„æ ¡å›­æ–‡åŒ–ã€‚</font></span><span style="mso-spacerun:'yes';font-family:å®‹ä½“;mso-ascii-font-family:Calibri;
 mso-hansi-font-family:Calibri;mso-bidi-font-family:'Times New Roman';font-size:10.5000pt;
-mso-font-kerning:1.0000pt;" ><o:p></o:p></span></p><p class=MsoNormal ><img width="480"  height="320"  src="9.ÓÀÔ¶¸úµ³×ßÖÜÄ©ÎÄ»¯¹ã³¡.files/9.ÓÀÔ¶¸úµ³×ßÖÜÄ©ÎÄ»¯¹ã³¡241.png" ><span style="mso-spacerun:'yes';font-family:ËÎÌå;mso-ascii-font-family:Calibri;
+mso-font-kerning:1.0000pt;" ><o:p></o:p></span></p><p class=MsoNormal ><img width="480"  height="320"  src="9.æ°¸è¿œè·Ÿå…šèµ°å‘¨æœ«æ–‡åŒ–å¹¿åœº.files/9.æ°¸è¿œè·Ÿå…šèµ°å‘¨æœ«æ–‡åŒ–å¹¿åœº241.png" ><span style="mso-spacerun:'yes';font-family:å®‹ä½“;mso-ascii-font-family:Calibri;
 mso-hansi-font-family:Calibri;mso-bidi-font-family:'Times New Roman';font-size:10.5000pt;
 mso-font-kerning:1.0000pt;" ><o:p>&nbsp;</o:p></span></p></div><!--EndFragment--></body></html>
